--- a/android/lib/resource/src/main/res/values-sv/strings.xml
+++ b/android/lib/resource/src/main/res/values-sv/strings.xml
@@ -7,14 +7,17 @@
     <string name="account_number">Kontonummer</string>
     <string name="account_time_notification_channel_description">Visar påminnelser när kontots tidsgräns uppnås</string>
     <string name="account_time_notification_channel_name">Påminnelser om kontotid</string>
+    <string name="add">Lägg till</string>
     <string name="add_30_days_time">Lägg till 30 dagar</string>
     <string name="add_30_days_time_x">Lägg till 30 dagar (%1$s)</string>
     <string name="add_a_server">Lägg till en server</string>
     <string name="add_dns_server_dialog_title">Lägg till DNS-server</string>
     <string name="add_location_to_list">Lägg till %1$s i listan</string>
     <string name="add_locations">Lägg till platser</string>
+    <string name="add_method">Lägg till metod</string>
     <string name="add_time_to_account">Du kan antingen köpa kredit på vår webbplats eller lösa in en kupong.</string>
-    <string name="added_to_your_account">%1$s har lagts till på ditt konto.</string>
+    <string name="added_to_your_account">%1$s har lagts till i ditt konto.</string>
+    <string name="adding_method">Lägger till metod ...</string>
     <string name="agree_and_continue">Godkänn och fortsätt</string>
     <string name="all_applications">Alla applikationer</string>
     <string name="all_locations">Alla platser</string>
@@ -23,9 +26,20 @@
     <string name="always_on_vpn_error_notification_content">Det går inte att starta tunnelanslutning. Aktivera VPN som alltid är på för &lt;b&gt;%1$s&lt;/b&gt; innan du använder Mullvad VPN.</string>
     <string name="always_on_vpn_error_notification_title">VPN som alltid är på har tilldelats till annan app</string>
     <string name="any">Valfri</string>
+    <string name="api_access_description">Hantera och lägg till anpassade metoder för att komma åt Mullvad API.</string>
+    <string name="api_access_method_info_first_line">Appen måste kommunicera med en Mullvad API-server för att logga in dig, hämta serverlistor och andra viktiga åtgärder.</string>
+    <string name="api_access_method_info_fourth_line">\"Aktuell\" metod representerar vilken metod appen använder för att nå API.</string>
+    <string name="api_access_method_info_second_line">Det kanske inte går att nå API-servrarna direkt på nätverk som använder olika censureringstyper.</string>
+    <string name="api_access_method_info_third_line">Men den här funktionen kan du kringgå censureringen genom att lägga till anpassade sätt att komma åt API:n via proxyservrar och liknande metoder.</string>
+    <string name="api_reachable">API kan nås</string>
+    <string name="api_reachable_adding_method">API kan nås, lägger till metod ...</string>
+    <string name="api_unreachable">API kan inte nås</string>
+    <string name="api_unreachable_save_anyway">API kan inte nås, spara metod ändå?</string>
     <string name="app_version">Appversion</string>
     <string name="apply">Använd</string>
+    <string name="at_least_on_method_needs_to_enabled">Minst en metod måste vara aktiverad</string>
     <string name="auth_failed">Det går inte att autentisera kontot. Skicka en problemrapport.</string>
+    <string name="authentication">Autentisering</string>
     <string name="auto_connect">Anslut automatiskt</string>
     <string name="auto_connect_and_lockdown_mode">Anslut automatiskt och Låsningsläge</string>
     <string name="auto_connect_and_lockdown_mode_footer">Ser till att enheten alltid är i VPN-tunneln.</string>
@@ -33,10 +47,11 @@
     <string name="auto_connect_carousel_first_slide_top_text">Inställningar för Anslut automatiskt och Låsningsläge finns i Androids systeminställningar. Följ guiden för att aktivera en av dem eller båda.</string>
     <string name="auto_connect_carousel_second_slide_bottom_text">2. Om du vill aktivera Anslut automatiskt klickar du på växlingsknappen bredvid &lt;b&gt;Alltid på-VPN&lt;/b&gt;.</string>
     <string name="auto_connect_carousel_second_slide_top_text">Anslut automatiskt kallas Alltid på-VPN i Androids systeminställningar och ser till att du är ansluten till VPN-tunneln oavbrutet och ansluter automatiskt efter omstart.</string>
-    <string name="auto_connect_carousel_third_slide_bottom_text">3. Om du vill aktivera Låsningsläge klickar du på växlingsknappen bredvid &lt;b&gt;Blockera anslutningar utan VPN&lt;/b&gt;.</string>
-    <string name="auto_connect_carousel_third_slide_top_text">Låsningsläget blockerar all internetåtkomst om VPN-tunneln kopplas från manuellt. &lt;br/&gt;&lt;b&gt;Varning! Den här inställningen blockerar delade appar och funktionen Lokal nätverksdelning (Local Network Sharing)&lt;/b&gt;.</string>
-    <string name="auto_connect_footer">Anslut automatiskt till en server när appen startas.</string>
+    <string name="auto_connect_carousel_third_slide_bottom_text">3. Om du vill aktivera Låsningsläge klickar du på växlingsknappen bredvid &lt;b&gt;Blockera anslutningar utan VPN&lt;/b&gt;.&lt;br /&gt;&lt;br /&gt;&lt;b&gt;Varning! Den här inställningen blockerar delade appar och funktionen Lokal nätverksdelning.&lt;/b&gt;</string>
+    <string name="auto_connect_carousel_third_slide_top_text">Låsningsläget kallas &lt;b&gt;Blockera anslutningar utan VPN&lt;/b&gt; i systeminställningarna på Android. Det minimerar läckor men det finns några kända begränsningar som du kan läsa mer om</string>
+    <string name="auto_connect_carousel_third_slide_top_text_website_link">här</string>
     <string name="auto_connect_footer_legacy">Använd systeminställningen &lt;b&gt;Alltid aktiverat&lt;/b&gt; istället genom att följa guiden i &lt;b&gt;%1$s&lt;/b&gt; ovan.</string>
+    <string name="auto_connect_footer_legacy_tv">Ansluts automatiskt när appen startar. Inställningen kommer i en kommande uppdatering att ersättas av en ny funktion som ansluter enheten när den startas.</string>
     <string name="auto_connect_legacy">Anslut automatiskt (äldre)</string>
     <string name="automatic">Automatisk</string>
     <string name="back">Tillbaka</string>
@@ -53,6 +68,7 @@
     <string name="buy_more_credit">Köp mer kredit</string>
     <string name="cancel">Avbryt</string>
     <string name="changes_dialog_subtitle">Ändringar i den här versionen:</string>
+    <string name="cipher">Chiffrering</string>
     <string name="confirm_local_dns">Den lokala DNS-servern fungerar inte om du inte aktiverar \"Lokal nätverksdelning\" under Inställningar.</string>
     <string name="confirm_no_email">Du är på väg att skicka problemrapporten utan att vi har möjlighet att besvara dig. Om du vill ha svar på din rapport måste du ange en e-postadress.</string>
     <string name="confirm_removal">Ja, logga ut enheten</string>
@@ -72,6 +88,7 @@
     <string name="creating_new_account">Skapar konto...</string>
     <string name="creating_secure_connection">SKAPAR SÄKER ANSLUTNING</string>
     <string name="critical_error">Kritiskt fel (kräver din uppmärksamhet)</string>
+    <string name="current_method">Aktuell: %1$s</string>
     <string name="custom_dns_disable_mode_subtitle">Inaktivera alla &lt;b&gt;%1$s&lt;/b&gt; ovan för att aktivera inställningen.</string>
     <string name="custom_dns_footer">Aktivera för att lägga till minst en DNS-server.</string>
     <string name="custom_dns_hint">Ange IP</string>
@@ -87,6 +104,8 @@
     <string name="delete_custom_list_confirmation_description">Ta bort \"%1$s\"?</string>
     <string name="delete_custom_list_message">\"%1$s\" har tagits bort</string>
     <string name="delete_list">Ta bort lista</string>
+    <string name="delete_method">Radera metod</string>
+    <string name="delete_method_question">Radera metod?</string>
     <string name="device_inactive_description">Du har tagit bort den här enheten. Du måste logga in igen för att återansluta.</string>
     <string name="device_inactive_title">Enheten är inaktiv</string>
     <string name="device_inactive_unblock_warning">Om du loggar in tas blockering av internet bort på den här enheten.</string>
@@ -111,9 +130,11 @@
     <string name="edit_lists">Redigera listor</string>
     <string name="edit_locations">Redigera platser</string>
     <string name="edit_message">Redigera meddelande</string>
+    <string name="edit_method">Redigera metod</string>
     <string name="edit_name">Redigera namn</string>
     <string name="enable">Aktivera</string>
     <string name="enable_custom_dns">Använd anpassad DNS-server</string>
+    <string name="enable_method">Aktivera metod</string>
     <string name="enter_value_placeholder">Ange MTU</string>
     <string name="enter_voucher_code">Ange kupongkod</string>
     <string name="error_occurred">Ett fel har inträffat.</string>
@@ -125,6 +146,8 @@
     <string name="failed_to_remove_device">Det gick inte att ta bort enheten</string>
     <string name="failed_to_send">Det gick inte att skicka</string>
     <string name="failed_to_send_details">Om du lämnar formuläret och försöker igen senare kommer informationen du anger att finnas kvar.</string>
+    <string name="failed_to_set_current_test_error">Kan inte ställas in som aktuell – API kan inte nås</string>
+    <string name="failed_to_set_current_unknown_error">Kan inte ställas in som aktuell – Okänd anledning</string>
     <string name="faqs_and_guides">Vanliga frågor och guider</string>
     <string name="filter">Filtrera</string>
     <string name="filtered">Filtrerat:</string>
@@ -176,6 +199,7 @@
     <string name="max_devices_warning_title">För många enheter</string>
     <string name="mullvad_account_number">Mullvad-kontonummer</string>
     <string name="mullvad_owned_only">Endast Mullvad-ägd</string>
+    <string name="name">Namn</string>
     <string name="name_was_changed_to">Namnet har ändrats till %1$s</string>
     <string name="new_device_notification_message">Välkommen! Den här enheten heter nu &lt;b&gt;%1$s&lt;/b&gt;. Använd informationsknappen i Konto för mer information.</string>
     <string name="new_device_notification_title">NY ENHET HAR SKAPATS</string>
@@ -199,7 +223,9 @@
     <string name="owned">Ägd</string>
     <string name="ownership">Ägarskap</string>
     <string name="paid_until">Betalat till</string>
-    <string name="patch_not_matching_specification">Konfigurationsfilen överensstämmer inte med specifikationen</string>
+    <string name="password">Lösenord</string>
+    <string name="password_optional">Lösenord (valfritt)</string>
+    <string name="patch_not_matching_specification">Korrigering överensstämmer inte med specifikationen</string>
     <string name="pay_to_start_using">Om du vill börja använda appen måste du först lägga till tid i ditt konto.</string>
     <string name="payment_billing_error_dialog_message">Vi kunde inte starta betalningsprocessen. Se till att du har den senaste versionen av Google Play.</string>
     <string name="payment_billing_error_dialog_title">Google Play är inte tillgängligt</string>
@@ -210,6 +236,8 @@
     <string name="payment_pending_dialog_message">Vi verifierar ditt köp just nu och det kan ta en stund. Din tid läggs till om verifieringen lyckas.</string>
     <string name="payment_pending_dialog_title">Verifierar köp</string>
     <string name="payment_status_pending">Google Play-betalning väntar</string>
+    <string name="please_enter_a_valid_ip_address">Ange en giltig IPv4- eller IPv6-adress</string>
+    <string name="please_enter_a_valid_remote_server_port">Ange en giltig fjärrserverport</string>
     <string name="port">Port</string>
     <string name="privacy_disclaimer_body_first_paragraph">Appen genomför automatiska versionskontroller för att se till att du har den säkraste versionen och för att informera dig om problem med den nuvarande versionen. Appversionen och Android-systemversionen skickas till Mullvad-servrarna. Mullvad registrerar antalet använda appversioner och Android-versioner. Dessa data lagras aldrig och används inte på något sätt som kan identifiera dig.</string>
     <string name="privacy_disclaimer_body_second_paragraph">Om delade tunnlar används, frågar appen ditt system om en lista med alla installerade applikationer. Listan hämtas bara i vyn för delade tunnlar. Listan med installerade applikationer skickas aldrig från enheten.</string>
@@ -245,6 +273,7 @@
     <string name="sent">Skickat</string>
     <string name="sent_contact">Om det behövs kontaktar vi dig på %1$s</string>
     <string name="sent_thanks">Tack!</string>
+    <string name="server">Server</string>
     <string name="server_ip_overrides">Åsidosättning av server-IP</string>
     <string name="server_ip_overrides_active">Åsidosättningar aktiva</string>
     <string name="server_ip_overrides_import_by">Importera nya åsidosättningar med</string>
@@ -262,6 +291,7 @@
     <string name="set_firewall_policy_error">Det går inte att tillämpa brandväggsregler. Felsök eller skicka en problemrapport.</string>
     <string name="settings">Inställningar</string>
     <string name="settings_account">Konto</string>
+    <string name="settings_api_access">API-åtkomst</string>
     <string name="settings_changes_effect_warning_content_blocker">Ändringar i DNS-relaterade inställningar kanske inte börjar gälla direkt på grund av cachade resultat.</string>
     <string name="settings_changes_effect_warning_short">DNS-inställningarna kanske inte börjar gälla direkt</string>
     <string name="settings_patch_error_failed_to_apply_patch">Konfigurationsfilen kunde inte tillämpas</string>
@@ -280,18 +310,26 @@
     <string name="submit_button">Skicka</string>
     <string name="switch_location">Växla plats</string>
     <string name="tcp">TCP</string>
+    <string name="test_method">Testmetod</string>
+    <string name="testing">Testar ...</string>
+    <string name="testing_name">Testar %1$s ...</string>
+    <string name="this_field_is_required">Fältet är obligatoriskt</string>
+    <string name="this_is_already_set_as_current">Den har redan ställts in som aktuell</string>
     <string name="to_add_locations_to_a_list">Om du vill lägga till platser i en lista kan du trycka på \"︙\" eller trycka länge på ett land, en stad eller en server.</string>
     <string name="to_create_a_custom_list">Om du vill skapa en anpassad lista trycker du på \"︙\"</string>
     <string name="toggle_vpn">Växla VPN</string>
     <string name="top_bar_device_name">Enhetsnamn: %1$s</string>
     <string name="top_bar_time_left">Tid kvar: %1$s</string>
+    <string name="transport_protocol">Transportprotokoll</string>
     <string name="try_again">Försök igen</string>
+    <string name="type">Typ</string>
     <string name="udp">UDP</string>
     <string name="udp_over_tcp_port_info">Vilken TCP-port som UDP-över-TCP-obfuskeringsprotokoll bör ansluta till på VPN-servern.</string>
     <string name="udp_over_tcp_port_title">UDP-över-TCP-port</string>
     <string name="undo">Ångra</string>
     <string name="unsecured">Oskyddad</string>
     <string name="unsecured_connection">OSÄKER ANSLUTNING</string>
+    <string name="unsecured_vpn_permission_error">Oskyddad (VPN-behörighet saknas)</string>
     <string name="unsupported_version">VERSION UTAN STÖD</string>
     <string name="unsupported_version_description">Din sekretess kan vara utsatt för risk med den här appversionen som inte stöds. Uppdatera nu.</string>
     <string name="unsupported_version_without_upgrade">Du kör en appversion som inte stöds.</string>
@@ -300,8 +338,11 @@
     <string name="update_available_footer">Uppdatering tillgänglig. Ladda ned för att vara säker.</string>
     <string name="update_dns_server_dialog_title">Uppdatera DNS-server</string>
     <string name="update_list_name">Uppdatera listnamn</string>
+    <string name="use_method">Använd metod</string>
     <string name="user_email_hint">Din e-postadress (valfritt)</string>
     <string name="user_message_hint">Skriv på engelska eller svenska och ange från vilket land du är ansluten så att vi kan hjälpa dig bättre.</string>
+    <string name="username">Användarnamn</string>
+    <string name="verifying_api_method">Verifierar API-metod ...</string>
     <string name="verifying_voucher">Verifierar kupong …</string>
     <string name="view_logs">Visa appens loggar</string>
     <string name="virtual_adapter_problem">Fel med virtuell adapter</string>
