--- a/gui/locales/sv/messages.po
+++ b/gui/locales/sv/messages.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: mullvad-app\n"
 "Language-Team: Swedish\n"
 "Language: sv_SE\n"
-"PO-Revision-Date: 2024-05-15 07:28\n"
+"PO-Revision-Date: 2024-06-27 08:16\n"
 
 msgid "%(duration)s was added, account paid until %(expiry)s."
 msgstr "%(duration)s har lagts till. Kontot är betalt till och med %(expiry)s."
@@ -1097,6 +1097,14 @@ msgid "Disconnected and unsecure"
 msgstr "Frånkopplad och osäker"
 
 msgctxt "notifications"
+msgid "Failed to enable split tunneling."
+msgstr "Det gick inte att aktivera split tunneling."
+
+msgctxt "notifications"
+msgid "Failed to enable split tunneling. Please try reconnecting or disable split tunneling."
+msgstr "Det gick inte att aktivera split tunneling. Anslut igen eller inaktivera split tunneling."
+
+msgctxt "notifications"
 msgid "Lockdown mode active, connection blocked"
 msgstr "Låsningsläget är aktivt, anslutning blockerad"
 
@@ -1689,12 +1697,24 @@ msgid "Connecting. %(location)s"
 msgstr "Ansluter. %(location)s"
 
 msgctxt "troubleshoot"
+msgid "Enable “Full Disk Access” for “Mullvad VPN” in the macOS system settings."
+msgstr "Aktivera \"Fullständig diskåtkomst\" för \"Mullvad VPN\" i macOS-systeminställningarna."
+
+msgctxt "troubleshoot"
+msgid "Failed to enable split tunneling. This is because the app is missing system permissions. What you can do:"
+msgstr "Det gick inte att aktivera split tunneling. Det kan bero på att appen saknar systembehörigheter. Det här kan du göra:"
+
+msgctxt "troubleshoot"
 msgid "If these steps do not work please send a problem report."
 msgstr "Om dessa steg inte fungerar kan du skicka en problemrapport."
 
 msgctxt "troubleshoot"
 msgid "Make sure you have NF tables support."
 msgstr "Se till att du har stöd för Nftables."
+
+msgctxt "troubleshoot"
+msgid "Open system settings"
+msgstr "Öppna systeminställningarna"
 
 msgctxt "troubleshoot"
 msgid "This error can happen when something other than Mullvad is actively updating the DNS."
@@ -2098,13 +2118,11 @@ msgstr "Vilken TCP-port som UDP-över-TCP-obfuskeringsprotokoll bör ansluta til
 msgid "%s (added)"
 msgstr "%s (har lagts till)"
 
-msgctxt "A location was added to a custom list"
 msgid "%s was added to \"%s\""
 msgstr "%s har lagts till i \"%s\""
 
-msgctxt "Shown as a toast when user added e.g 30 days or 3 months of time to their account"
 msgid "%s was added to your account."
-msgstr "%s har lagts till på ditt konto."
+msgstr "%s har lagts till i ditt konto."
 
 msgid "1. After clicking on the <b>Go to VPN settings</b> button below, click on the cogwheel next to the <b>Mullvad VPN</b> name."
 msgstr "1. Efter att du har klickat på <b>Gå till VPN-inställningar</b> nedan klickar du på kugghjulet bredvid namnet <b>Mullvad VPN</b>."
@@ -2112,11 +2130,17 @@ msgstr "1. Efter att du har klickat på <b>Gå till VPN-inställningar</b> nedan
 msgid "2. To enable Auto-connect, click on the toggle next to <b>Always-on VPN</b>."
 msgstr "2. Om du vill aktivera Anslut automatiskt klickar du på växlingsknappen bredvid <b>Alltid på-VPN</b>."
 
-msgid "3. To enable Lockdown mode, click on the toggle next to <b>Block connections without VPN</b>."
-msgstr "3. Om du vill aktivera Låsningsläge klickar du på växlingsknappen bredvid <b>Blockera anslutningar utan VPN</b>."
+msgid "3. To enable Lockdown mode, click on the toggle next to <b>Block connections without VPN</b>.<br /><br /><b>Warning: This setting blocks split apps and the Local Network Sharing feature.</b>"
+msgstr "3. Om du vill aktivera Låsningsläge klickar du på växlingsknappen bredvid <b>Blockera anslutningar utan VPN</b>.<br /><br /><b>Varning! Den här inställningen blockerar delade appar och funktionen Lokal nätverksdelning.</b>"
 
 msgid "30 days was added to your account."
 msgstr "30 dagar har lagts till i ditt konto."
+
+msgid "API reachable, adding method..."
+msgstr "API kan nås, lägger till metod ..."
+
+msgid "API unreachable, save method anyway?"
+msgstr "API kan inte nås, spara metod ändå?"
 
 msgid "Account credit expires in a few minutes"
 msgstr "Kontokrediten slutar gälla om några minuter"
@@ -2127,7 +2151,6 @@ msgstr "Kontokrediten slutar snart gälla"
 msgid "Account time reminders"
 msgstr "Påminnelser om kontotid"
 
-msgctxt "Add a Country,City, or Server to a custom list"
 msgid "Add %s to list"
 msgstr "Lägg till %s i listan"
 
@@ -2142,6 +2165,9 @@ msgstr "Lägg till DNS-server"
 
 msgid "Add locations"
 msgstr "Lägg till platser"
+
+msgid "Adding method..."
+msgstr "Lägger till metod ..."
 
 msgid "Agree and continue"
 msgstr "Godkänn och fortsätt"
@@ -2161,6 +2187,9 @@ msgstr "VPN som alltid är på har tilldelats till annan app"
 msgid "Always-on VPN might be enabled for another app"
 msgstr "VPN som alltid är på kan ha aktiverats för annan app"
 
+msgid "At least one method needs to be enabled"
+msgstr "Minst en metod måste vara aktiverad"
+
 msgid "Attention: Split tunneling is a privacy risk."
 msgstr "Obs! Split tunneling är en sekretessrisk."
 
@@ -2178,6 +2207,10 @@ msgstr "Anslut automatiskt (äldre)"
 
 msgid "Auto-connect is called Always-on VPN in the Android system settings and it makes sure you are constantly connected to the VPN tunnel and auto connects after restart."
 msgstr "Anslut automatiskt kallas Alltid på-VPN i Androids systeminställningar och ser till att du är ansluten till VPN-tunneln oavbrutet och ansluter automatiskt efter omstart."
+
+msgctxt "Description of the existing \"auto-connect\" functionality as well as a notification about it being removed/replaced in a future update."
+msgid "Automatically connect when the app launches. This setting will be replaced with a new connect on device start-up feature in a future update."
+msgstr "Ansluts automatiskt när appen startar. Inställningen kommer i en kommande uppdatering att ersättas av en ny funktion som ansluter enheten när den startas."
 
 msgid "Blocking internet (device offline)"
 msgstr "Blockerar internet (enheten är offline)"
@@ -2206,6 +2239,10 @@ msgstr "Skapa ny lista"
 msgid "Critical error (your attention is required)"
 msgstr "Kritiskt fel (kräver din uppmärksamhet)"
 
+msgctxt "Status information about which method/configuration is actively being used. The placeholder is replaced by a built-in or custom method. For example \"Current: Direct\" or \"Current: MyCustomMethod\". Note that it's not \"current\" as in \"present time\"."
+msgid "Current: %s"
+msgstr "Aktuell: %s"
+
 msgid "Custom DNS server addresses %s are invalid"
 msgstr "Anpassade DNS-serveradresser %s är ogiltiga"
 
@@ -2214,6 +2251,12 @@ msgstr "DNS-inställningarna kanske inte börjar gälla direkt"
 
 msgid "Delete \"%s\"?"
 msgstr "Ta bort \"%s\"?"
+
+msgid "Delete method"
+msgstr "Radera metod"
+
+msgid "Delete method?"
+msgstr "Radera metod?"
 
 msgid "Disable all <b>%s</b> above to activate this setting."
 msgstr "Inaktivera alla <b>%s</b> ovan för att aktivera inställningen."
@@ -2239,6 +2282,9 @@ msgstr "Redigera platser"
 msgid "Edit name"
 msgstr "Redigera namn"
 
+msgid "Enable method"
+msgstr "Aktivera metod"
+
 msgid "Enter MTU"
 msgstr "Ange MTU"
 
@@ -2247,6 +2293,12 @@ msgstr "Exkluderade applikationer"
 
 msgid "Failed to apply patch"
 msgstr "Konfigurationsfilen kunde inte tillämpas"
+
+msgid "Failed to set to current - API not reachable"
+msgstr "Kan inte ställas in som aktuell – API kan inte nås"
+
+msgid "Failed to set to current - Unknown reason"
+msgstr "Kan inte ställas in som aktuell – Okänd anledning"
 
 msgid "File"
 msgstr "Fil"
@@ -2332,12 +2384,20 @@ msgstr "Åsidosättningar rensade"
 msgid "Overrides inactive"
 msgstr "Åsidosättningar inaktiva"
 
+msgid "Password (optional)"
+msgstr "Lösenord (valfritt)"
+
 msgid "Paste or write overrides to be imported"
 msgstr "Klistra in eller skriv åsidosättningar som ska importeras"
 
-msgctxt "The patch is a partial settings file that can be applied to the users' list of servers, overriding some of the values for the servers. This is part of Server IP overrides."
 msgid "Patch not matching specification"
-msgstr "Konfigurationsfilen överensstämmer inte med specifikationen"
+msgstr "Korrigering överensstämmer inte med specifikationen"
+
+msgid "Please enter a valid IPv4 or IPv6 address"
+msgstr "Ange en giltig IPv4- eller IPv6-adress"
+
+msgid "Please enter a valid remote server port"
+msgstr "Ange en giltig fjärrserverport"
 
 msgid "Please use the <b>Always-on</b> system setting instead by following the guide in <b>%s</b> above."
 msgstr "Använd systeminställningen <b>Alltid aktiverat</b> istället genom att följa guiden i <b>%s</b> ovan."
@@ -2357,7 +2417,6 @@ msgstr "Rekursionsgräns"
 msgid "Remove"
 msgstr "Ta bort"
 
-msgctxt "Remove a Country, City, or Server from a custom list."
 msgid "Remove %s from list"
 msgstr "Ta bort %s från listan"
 
@@ -2397,14 +2456,23 @@ msgstr "Visar påminnelser när kontots tidsgräns uppnås"
 msgid "Submit"
 msgstr "Skicka"
 
+msgid "Test method"
+msgstr "Testmetod"
+
+msgid "Testing %s..."
+msgstr "Testar %s ..."
+
 msgid "Text"
 msgstr "Text"
 
 msgid "The Auto-connect and Lockdown mode settings can be found in the Android system settings, follow this guide to enable one or both."
 msgstr "Inställningar för Anslut automatiskt och Låsningsläge finns i Androids systeminställningar. Följ guiden för att aktivera en av dem eller båda."
 
-msgid "The Lockdown mode blocks all internet access if the VPN tunnel is manually disconnected. <br/><b>Warning: This setting blocks split apps and the Local Network Sharing feature</b>."
-msgstr "Låsningsläget blockerar all internetåtkomst om VPN-tunneln kopplas från manuellt. <br/><b>Varning! Den här inställningen blockerar delade appar och funktionen Lokal nätverksdelning (Local Network Sharing)</b>."
+msgid "The Lockdown mode is called <b>Block connections without VPN</b> in the Android system settings. It helps minimize leaks, however it has some known limitations which you can read more about"
+msgstr "Låsningsläget kallas <b>Blockera anslutningar utan VPN</b> i systeminställningarna på Android. Det minimerar läckor men det finns några kända begränsningar som du kan läsa mer om"
+
+msgid "The \"Current\" method represent which method the app is using to reach the API."
+msgstr "\"Aktuell\" metod representerar vilken metod appen använder för att nå API."
 
 msgid "The local DNS server will not work unless you enable \"Local Network Sharing\" under Preferences."
 msgstr "Den lokala DNS-servern fungerar inte om du inte aktiverar \"Lokal nätverksdelning\" under Inställningar."
@@ -2414,6 +2482,12 @@ msgstr "Det finns inga VPN-inställningar på din enhet"
 
 msgid "This address has already been entered."
 msgstr "Adressen har redan angetts."
+
+msgid "This field is required"
+msgstr "Fältet är obligatoriskt"
+
+msgid "This is already set as current"
+msgstr "Den har redan ställts in som aktuell"
 
 msgid "To add locations to a list, press the \"︙\" or long press on a country, city, or server."
 msgstr "Om du vill lägga till platser i en lista kan du trycka på \"︙\" eller trycka länge på ett land, en stad eller en server."
@@ -2439,12 +2513,15 @@ msgstr "Det går inte att starta tunnelanslutning. Aktivera VPN som alltid är p
 msgid "Undo"
 msgstr "Ångra"
 
-msgctxt "Key is refering to a JSON key. The user selected a file or written/pasted a Server IP Override patch that was missing or using an invalid key."
 msgid "Unknown or prohibited key \"%s\""
 msgstr "Okänd eller förbjuden nyckel \"%s\""
 
 msgid "Unsecured"
 msgstr "Oskyddad"
+
+msgctxt "Notification message shown when the app lacks a permission called \"VPN permission\"."
+msgid "Unsecured (No VPN permission)"
+msgstr "Oskyddad (VPN-behörighet saknas)"
 
 msgid "Update DNS server"
 msgstr "Uppdatera DNS-server"
@@ -2454,6 +2531,9 @@ msgstr "Uppdatering tillgänglig. Ladda ned för att vara säker."
 
 msgid "Update list name"
 msgstr "Uppdatera listnamn"
+
+msgid "Use method"
+msgstr "Använd metod"
 
 msgid "VPN permission error"
 msgstr "Behörighetsfel med VPN"
@@ -2469,6 +2549,9 @@ msgstr "Giltig WireGuard-nyckel saknas. Hantera nycklar i Avancerade inställnin
 
 msgid "Valid ranges: %s"
 msgstr "Giltiga intervall: %s"
+
+msgid "Verifying API method..."
+msgstr "Verifierar API-metod ..."
 
 msgid "Verifying purchase"
 msgstr "Verifierar köp"
@@ -2514,6 +2597,10 @@ msgstr "Du kör en appversion som inte stöds."
 
 msgid "\"%s\" was deleted"
 msgstr "\"%s\" har tagits bort"
+
+msgctxt "Clickable link that leads to our website."
+msgid "here"
+msgstr "här"
 
 msgid "less than a minute ago"
 msgstr "mindre än en minut sedan"
