--- a/android/lib/resource/src/main/res/values-es/strings.xml
+++ b/android/lib/resource/src/main/res/values-es/strings.xml
@@ -7,14 +7,17 @@
     <string name="account_number">Número de cuenta</string>
     <string name="account_time_notification_channel_description">Muestra avisos cuando el tiempo de la cuenta está a punto de caducar</string>
     <string name="account_time_notification_channel_name">Recordatorios de tiempo de la cuenta</string>
+    <string name="add">Añadir</string>
     <string name="add_30_days_time">Añadir 30 días</string>
     <string name="add_30_days_time_x">Añadir 30 días (%1$s)</string>
     <string name="add_a_server">Añadir un servidor</string>
     <string name="add_dns_server_dialog_title">Añadir servidor DNS</string>
     <string name="add_location_to_list">Añadir %1$s a la lista</string>
     <string name="add_locations">Añadir ubicaciones</string>
+    <string name="add_method">Añadir método</string>
     <string name="add_time_to_account">Compre crédito en nuestro sitio web o canjee un cupón.</string>
-    <string name="added_to_your_account">Se ha añadido %1$s a su cuenta.</string>
+    <string name="added_to_your_account">%1$s se ha añadido a su cuenta.</string>
+    <string name="adding_method">Añadiendo método...</string>
     <string name="agree_and_continue">Aceptar y continuar</string>
     <string name="all_applications">Todas las aplicaciones</string>
     <string name="all_locations">Todas las ubicaciones</string>
@@ -23,9 +26,20 @@
     <string name="always_on_vpn_error_notification_content">No se puede iniciar la conexión de túnel. Deshabilite la VPN siempre activa en &lt;b&gt;%1$s&lt;/b&gt; antes de utilizar la VPN de Mullvad.</string>
     <string name="always_on_vpn_error_notification_title">La VPN siempre activa se ha asignado a otra aplicación</string>
     <string name="any">Cualquiera</string>
+    <string name="api_access_description">Gestione y añada métodos personalizados para acceder a la API de Mullvad.</string>
+    <string name="api_access_method_info_first_line">La aplicación necesita comunicarse con un servidor API de Mullvad para iniciar su sesión, obtener las listas de servidores y otras operaciones críticas.</string>
+    <string name="api_access_method_info_fourth_line">El método «Actual» representa el método que la aplicación utiliza para acceder a la API.</string>
+    <string name="api_access_method_info_second_line">En algunas redes, donde se aplican diversos tipos de censura, los servidores de API podrían no estar directamente accesibles.</string>
+    <string name="api_access_method_info_third_line">Esta característica le permite eludir la censura al añadir métodos personalizados de acceder a la API a través de proxies y métodos similares.</string>
+    <string name="api_reachable">API accesible</string>
+    <string name="api_reachable_adding_method">API accesible, añadiendo método...</string>
+    <string name="api_unreachable">API inaccesible</string>
+    <string name="api_unreachable_save_anyway">API inaccesible, ¿guardar el método de todos modos?</string>
     <string name="app_version">Versión de la aplicación</string>
     <string name="apply">Aplicar</string>
+    <string name="at_least_on_method_needs_to_enabled">Se debe habilitar al menos un método</string>
     <string name="auth_failed">No se puede autenticar la cuenta. Envíe un informe de problemas.</string>
+    <string name="authentication">Autenticación</string>
     <string name="auto_connect">Conexión automática</string>
     <string name="auto_connect_and_lockdown_mode">Conexión automática y modo de bloqueo</string>
     <string name="auto_connect_and_lockdown_mode_footer">Asegura que el dispositivo esté siempre activado en el túnel de la VPN.</string>
@@ -33,10 +47,11 @@
     <string name="auto_connect_carousel_first_slide_top_text">La configuración del modo de bloqueo y de la conexión automática puede encontrarse en la configuración del sistema Android, siga esta guía para habilitar uno o ambos.</string>
     <string name="auto_connect_carousel_second_slide_bottom_text">2. Para habilitar la conexión automática, haga clic en el botón &lt;b&gt;VPN siempre activa&lt;/b&gt;.</string>
     <string name="auto_connect_carousel_second_slide_top_text">La conexión automática se llama VPN siempre activa en la configuración del sistema Android y asegura estar conectado constantemente al túnel de la VPN y conectarse automáticamente después de cada reinicio.</string>
-    <string name="auto_connect_carousel_third_slide_bottom_text">3. Para habilitar el modo de bloqueo, haga clic en el botón situado junto a &lt;b&gt;Bloquear conexiones sin VPN&lt;/b&gt;.</string>
-    <string name="auto_connect_carousel_third_slide_top_text">El modo de bloqueo bloquea todo el acceso a Internet si el túnel de la VPN está desconectado manualmente. &lt;br/&gt;&lt;b&gt;Advertencia: Este ajuste bloquea las aplicaciones divididas y la opción Uso compartido de la red local&lt;/b&gt;.</string>
-    <string name="auto_connect_footer">Al iniciarse la aplicación, se conecta automáticamente a un servidor.</string>
+    <string name="auto_connect_carousel_third_slide_bottom_text">3. Para habilitar el modo de bloqueo, haga clic en el botón situado junto a &lt;b&gt;Bloquear conexiones sin VPN&lt;/b&gt;.&lt;br /&gt;&lt;br /&gt;&lt;b&gt;Advertencia: Este ajuste bloquea las aplicaciones divididas y la opción Uso compartido de la red local.&lt;/b&gt;</string>
+    <string name="auto_connect_carousel_third_slide_top_text">El modo de bloqueo se llama &lt;b&gt;Bloquear conexiones sin VPN&lt;/b&gt; en la configuración del sistema Android. Ayuda a minimizar las filtraciones, sin embargo, posee algunas limitaciones conocidas sobre las que puede leer más información</string>
+    <string name="auto_connect_carousel_third_slide_top_text_website_link">aquí</string>
     <string name="auto_connect_footer_legacy">En su lugar, utilice el ajuste de sistema &lt;b&gt;Siempre activado&lt;/b&gt; siguiendo arriba la guía en &lt;b&gt;%1$s&lt;/b&gt;.</string>
+    <string name="auto_connect_footer_legacy_tv">Conectar automáticamente cuando se inicie la aplicación. Este ajuste se reemplazará por una conexión nueva en la función de inicio de dispositivo en una futura actualización.</string>
     <string name="auto_connect_legacy">Conexión automática (heredada)</string>
     <string name="automatic">Automático</string>
     <string name="back">Volver</string>
@@ -53,6 +68,7 @@
     <string name="buy_more_credit">Comprar más créditos</string>
     <string name="cancel">Cancelar</string>
     <string name="changes_dialog_subtitle">Cambios en esta versión:</string>
+    <string name="cipher">Cifrado</string>
     <string name="confirm_local_dns">El servidor DNS local no funcionará a no ser que habilite la opción «Uso compartido de red local» en Preferencias.</string>
     <string name="confirm_no_email">Va a enviar el informe de problemas sin indicar una forma de contacto. Para obtener una respuesta sobre el informe, necesita especificar su dirección de correo electrónico.</string>
     <string name="confirm_removal">Sí, cerrar sesión</string>
@@ -72,6 +88,7 @@
     <string name="creating_new_account">Creando cuenta…</string>
     <string name="creating_secure_connection">CREANDO CONEXIÓN SEGURA</string>
     <string name="critical_error">Error crítico (precisa su atención)</string>
+    <string name="current_method">Actual: %1$s</string>
     <string name="custom_dns_disable_mode_subtitle">Deshabilite todos los &lt;b&gt;%1$s&lt;/b&gt; de arriba para activar este ajuste.</string>
     <string name="custom_dns_footer">Active esta opción para agregar como mínimo un servidor DNS.</string>
     <string name="custom_dns_hint">Introducir IP</string>
@@ -87,6 +104,8 @@
     <string name="delete_custom_list_confirmation_description">¿Eliminar «%1$s»?</string>
     <string name="delete_custom_list_message">Se ha eliminado «%1$s»</string>
     <string name="delete_list">Eliminar lista</string>
+    <string name="delete_method">Eliminar método</string>
+    <string name="delete_method_question">¿Eliminar el método?</string>
     <string name="device_inactive_description">Ha quitado este dispositivo. Vuelva a iniciar la sesión para conectarse.</string>
     <string name="device_inactive_title">El dispositivo está inactivo</string>
     <string name="device_inactive_unblock_warning">Al iniciar la sesión, se desbloqueará el acceso a Internet en este dispositivo.</string>
@@ -111,9 +130,11 @@
     <string name="edit_lists">Editar listas</string>
     <string name="edit_locations">Editar ubicaciones</string>
     <string name="edit_message">Editar mensaje</string>
+    <string name="edit_method">Editar método</string>
     <string name="edit_name">Editar nombre</string>
     <string name="enable">Habilitar</string>
     <string name="enable_custom_dns">Usar servidor DNS personalizado</string>
+    <string name="enable_method">Habilitar método</string>
     <string name="enter_value_placeholder">Introducir MTU</string>
     <string name="enter_voucher_code">Escriba el código del cupón</string>
     <string name="error_occurred">Se produjo un error.</string>
@@ -125,6 +146,8 @@
     <string name="failed_to_remove_device">No se pudo quitar el dispositivo</string>
     <string name="failed_to_send">No se pudo enviar</string>
     <string name="failed_to_send_details">Si cierra el formulario y vuelve a intentarlo más tarde, la información que haya escrito seguirá estando disponible.</string>
+    <string name="failed_to_set_current_test_error">Error al establecer el método como actual: API no accesible</string>
+    <string name="failed_to_set_current_unknown_error">Error al establecer el método como actual: Razón desconocida</string>
     <string name="faqs_and_guides">Preguntas frecuentes y guías</string>
     <string name="filter">Filtrar</string>
     <string name="filtered">Filtros aplicados:</string>
@@ -176,6 +199,7 @@
     <string name="max_devices_warning_title">Demasiados dispositivos</string>
     <string name="mullvad_account_number">Número de cuenta de Mullvad</string>
     <string name="mullvad_owned_only">Solo propiedad de Mullvad</string>
+    <string name="name">Nombre</string>
     <string name="name_was_changed_to">Se ha cambiado el nombre a %1$s</string>
     <string name="new_device_notification_message">Hola, este dispositivo se llama ahora &lt;b&gt;%1$s&lt;/b&gt;. Para más información, consulte el botón de información en la Cuenta.</string>
     <string name="new_device_notification_title">NUEVO DISPOSITIVO CREADO</string>
@@ -199,6 +223,8 @@
     <string name="owned">Propios</string>
     <string name="ownership">Propiedad</string>
     <string name="paid_until">Pagado hasta</string>
+    <string name="password">Contraseña</string>
+    <string name="password_optional">Contraseña (opcional)</string>
     <string name="patch_not_matching_specification">El parche no coincide con la especificación</string>
     <string name="pay_to_start_using">Para empezar a usar la aplicación, primero necesita agregar tiempo a su cuenta.</string>
     <string name="payment_billing_error_dialog_message">No hemos podido iniciar el proceso de pago. Asegúrese de tener la última versión de Google Play.</string>
@@ -210,6 +236,8 @@
     <string name="payment_pending_dialog_message">Estamos verificando su compra en este momento. Esto podría tardar algún tiempo. Su tiempo se añadirá si pasa la verificación.</string>
     <string name="payment_pending_dialog_title">Verificando la compra</string>
     <string name="payment_status_pending">Pago a Google Play pendiente</string>
+    <string name="please_enter_a_valid_ip_address">Escriba una dirección IPv4 o IPv6 válida</string>
+    <string name="please_enter_a_valid_remote_server_port">Introduzca un puerto de servidor remoto válido</string>
     <string name="port">Puerto</string>
     <string name="privacy_disclaimer_body_first_paragraph">Para garantizar que tiene la versión más segura e informarle de cualquier problema con la versión actual que está ejecutando, la aplicación realiza verificaciones de versiones automáticamente. Esto envía la versión de la aplicación y la versión del sistema Android a los servidores de Mullvad. Mullvad mantiene contadores del número de versiones de la aplicación y versiones de Android usadas. Los datos nunca se almacenan ni utilizan de forma que puedan identificarle.</string>
     <string name="privacy_disclaimer_body_second_paragraph">Si se utiliza la característica de túnel dividido, la aplicación consultará a su sistema la lista de todas las aplicaciones instaladas. Esta lista solo se recupera en la vista de túnel dividido. La lista de aplicaciones instaladas nunca se envía desde el dispositivo.</string>
@@ -245,6 +273,7 @@
     <string name="sent">Enviado</string>
     <string name="sent_contact">Si es necesario, le enviaremos un correo electrónico a %1$s</string>
     <string name="sent_thanks">¡Gracias!</string>
+    <string name="server">Servidor</string>
     <string name="server_ip_overrides">Anulación de IP de servidor</string>
     <string name="server_ip_overrides_active">Anulaciones activas</string>
     <string name="server_ip_overrides_import_by">Importar nuevas anulaciones por</string>
@@ -262,6 +291,7 @@
     <string name="set_firewall_policy_error">No se pueden aplicar las reglas del firewall. Intente solucionar el problema o envíe un informe de problemas.</string>
     <string name="settings">Configuración</string>
     <string name="settings_account">Cuenta</string>
+    <string name="settings_api_access">Acceso a API</string>
     <string name="settings_changes_effect_warning_content_blocker">Los cambios en la configuración relacionada con el DNS no surtirán efecto inmediatamente debido a los resultados en caché.</string>
     <string name="settings_changes_effect_warning_short">La configuración de DNS podría no surtir efecto inmediatamente</string>
     <string name="settings_patch_error_failed_to_apply_patch">Error al aplicar el parche</string>
@@ -280,18 +310,26 @@
     <string name="submit_button">Enviar</string>
     <string name="switch_location">Cambiar ubicación</string>
     <string name="tcp">TCP</string>
+    <string name="test_method">Probar método</string>
+    <string name="testing">Probando...</string>
+    <string name="testing_name">Probando %1$s...</string>
+    <string name="this_field_is_required">Este campo es obligatorio</string>
+    <string name="this_is_already_set_as_current">Este ya está configurado como actual</string>
     <string name="to_add_locations_to_a_list">Para añadir ubicaciones a una lista, pulse «︙» o mantenga pulsado unos segundos un país, ciudad o servidor.</string>
     <string name="to_create_a_custom_list">Para crear una lista personalizada, pulse «︙»</string>
     <string name="toggle_vpn">Alternar VPN</string>
     <string name="top_bar_device_name">Nombre del dispositivo: %1$s</string>
     <string name="top_bar_time_left">Tiempo restante: %1$s</string>
+    <string name="transport_protocol">Protocolo de transporte</string>
     <string name="try_again">Volver a intentarlo</string>
+    <string name="type">Tipo</string>
     <string name="udp">UDP</string>
     <string name="udp_over_tcp_port_info">El puerto TCP al que se conectará el protocolo de ofuscación de UDP sobre TCP en el servidor VPN.</string>
     <string name="udp_over_tcp_port_title">Puerto de UDP sobre TCP</string>
     <string name="undo">Deshacer</string>
     <string name="unsecured">No protegido</string>
     <string name="unsecured_connection">CONEXIÓN NO SEGURA</string>
+    <string name="unsecured_vpn_permission_error">Desprotegido (sin permiso de VPN)</string>
     <string name="unsupported_version">VERSIÓN NO ADMITIDA</string>
     <string name="unsupported_version_description">Al usar esta versión obsoleta de la aplicación, es posible que su privacidad esté en riesgo. Actualice ahora.</string>
     <string name="unsupported_version_without_upgrade">Ejecuta una versión de la aplicación que no es compatible.</string>
@@ -300,8 +338,11 @@
     <string name="update_available_footer">Hay una actualización disponible, descárguela para seguir protegido.</string>
     <string name="update_dns_server_dialog_title">Actualizar servidor DNS</string>
     <string name="update_list_name">Actualizar nombre de la lista</string>
+    <string name="use_method">Utilizar método</string>
     <string name="user_email_hint">Su correo electrónico (opcional)</string>
     <string name="user_message_hint">Para ayudarle mejor, escriba en inglés o sueco e indique desde qué país se está conectando.</string>
+    <string name="username">Nombre de usuario</string>
+    <string name="verifying_api_method">Verificando método de API...</string>
     <string name="verifying_voucher">Verificando el cupón…</string>
     <string name="view_logs">Ver registros de la aplicación</string>
     <string name="virtual_adapter_problem">Error del adaptador virtual</string>
