--- a/android/lib/resource/src/main/res/values-nb/strings.xml
+++ b/android/lib/resource/src/main/res/values-nb/strings.xml
@@ -7,14 +7,17 @@
     <string name="account_number">Kontonummer</string>
     <string name="account_time_notification_channel_description">Viser påminnelser når tidsavbrudd for kontoen er i ferd med å inntreffe</string>
     <string name="account_time_notification_channel_name">Påminnelser om tidsavbrudd for konto</string>
+    <string name="add">Legg til</string>
     <string name="add_30_days_time">Legg til 30 dager</string>
     <string name="add_30_days_time_x">Legg til 30 dager (%1$s)</string>
     <string name="add_a_server">Legg til en server</string>
     <string name="add_dns_server_dialog_title">Legg til DNS-server</string>
-    <string name="add_location_to_list">Legg til %1$s i listen</string>
+    <string name="add_location_to_list">Legg %1$s til i listen</string>
     <string name="add_locations">Legg til plasseringer</string>
+    <string name="add_method">Legg til metode</string>
     <string name="add_time_to_account">Du kan enten kjøpe kreditt på nettsiden vår eller løse inn en kupong.</string>
     <string name="added_to_your_account">%1$s ble lagt til kontoen din.</string>
+    <string name="adding_method">Legger til metoden ...</string>
     <string name="agree_and_continue">Godta og fortsett</string>
     <string name="all_applications">Alle applikasjoner</string>
     <string name="all_locations">Alle steder</string>
@@ -23,9 +26,20 @@
     <string name="always_on_vpn_error_notification_content">Kunne ikke starte tunneltilkobling. Deaktiver VPN som alltid er på, for &lt;b&gt;%1$s&lt;/b&gt; før du bruker Mullvad VPN.</string>
     <string name="always_on_vpn_error_notification_title">VPN som alltid er på, er tilordnet en annen app</string>
     <string name="any">Hvilken som helst</string>
+    <string name="api_access_description">Administrer og legg til tilpassede metoder for tilgang til Mullvad API.</string>
+    <string name="api_access_method_info_first_line">Appen må kunne kommunisere med en Mullvad API-server for å logge deg inn, hente serverlister og utføre andre kritiske operasjoner.</string>
+    <string name="api_access_method_info_fourth_line">«Gjeldende» metode betyr den metoden som appen bruker for å nå API.</string>
+    <string name="api_access_method_info_second_line">På enkelte nettverk der det brukes ulike typer sensur, kan det hende API-servere ikke er direkte tilgjengelig.</string>
+    <string name="api_access_method_info_third_line">Denne funksjonen lar deg omgå sensuren ved å legge til tilpassede måter å få tilgang til API på via proxyer og lignende metoder.</string>
+    <string name="api_reachable">API tilgjengelig</string>
+    <string name="api_reachable_adding_method">API tilgjengelig, legger til metode …</string>
+    <string name="api_unreachable">API ikke tilgjengelig</string>
+    <string name="api_unreachable_save_anyway">API ikke tilgjengelig, lagre metoden uansett?</string>
     <string name="app_version">Appversjon</string>
     <string name="apply">Angi</string>
+    <string name="at_least_on_method_needs_to_enabled">Minst én metode må være aktivert</string>
     <string name="auth_failed">Kunne ikke autentisere konto. Send inn en problemrapport.</string>
+    <string name="authentication">Autentisering</string>
     <string name="auto_connect">Automatisk tilkobling</string>
     <string name="auto_connect_and_lockdown_mode">Automatisk tilkobling og låsemodus</string>
     <string name="auto_connect_and_lockdown_mode_footer">Sørger for at enheten alltid er på VPN-tunnelen.</string>
@@ -33,10 +47,11 @@
     <string name="auto_connect_carousel_first_slide_top_text">Du finner innstillingene for automatisk tilkobling og låsemodus i Androids systeminnstillinger. Følg denne veiledningen for å aktivere én eller begge.</string>
     <string name="auto_connect_carousel_second_slide_bottom_text">2. For å aktivere Automatisk tilkobling trykker du på bryteren ved siden av &lt;b&gt;VPN alltid på&lt;/b&gt;.</string>
     <string name="auto_connect_carousel_second_slide_top_text">Automatisk tilkobling heter «Alltid-på-VPN» i Androids systeminnstillinger og sørger for at du alltid er tilkoblet VPN-tunnelen og automatisk tilkobling etter omstart.</string>
-    <string name="auto_connect_carousel_third_slide_bottom_text">3. For å aktivere låsemodus trykker du på bryteren ved siden av &lt;b&gt;Blokker tilkoblinger uten VPN&lt;/b&gt;.</string>
-    <string name="auto_connect_carousel_third_slide_top_text">Låsemodusen blokkerer all internettilgang når VPN-tunnelen er manuelt frakoblet. &lt;br/&gt;&lt;b&gt;Advarsel: Innstillingen blokkerer delte apper og funksjonen Deling over lokalt nettverk&lt;/b&gt;.</string>
-    <string name="auto_connect_footer">Kobler automatisk til en server når appen starter.</string>
+    <string name="auto_connect_carousel_third_slide_bottom_text">3. Klikk på bryteren ved siden av &lt;b&gt;Blokker tilkoblinger uten VPN&lt;/b&gt; for å aktivere låsemodusen.&lt;br /&gt;&lt;br /&gt;&lt;b&gt;Advarsel: Denne innstillingen blokkerer delte apper og funksjonen Deling over lokalt nettverk.&lt;/b&gt;</string>
+    <string name="auto_connect_carousel_third_slide_top_text">Låsemodusen kalles &lt;b&gt;Blokker tilkoblinger uten VPN&lt;/b&gt; i systeminnstillingene for Android. Den bidrar til å minimere lekkasjer, men den har noen kjente begrensninger som du kan lese mer om</string>
+    <string name="auto_connect_carousel_third_slide_top_text_website_link">her</string>
     <string name="auto_connect_footer_legacy">Bruk systeminnstillingen &lt;b&gt;alltid på&lt;/b&gt; i stedet for å følge veiledningen i &lt;b&gt;%1$s&lt;/b&gt; ovenfor.</string>
+    <string name="auto_connect_footer_legacy_tv">Koble til automatisk når appen startes. Denne innstillingen vil i en fremtidig oppdatering bli erstattet med en ny funksjon for tilkobling ved oppstart av enheten.</string>
     <string name="auto_connect_legacy">Automatisk tilkobling (eldre)</string>
     <string name="automatic">Automatisk</string>
     <string name="back">Tilbake</string>
@@ -53,6 +68,7 @@
     <string name="buy_more_credit">Kjøp mer kreditt</string>
     <string name="cancel">Avbryt</string>
     <string name="changes_dialog_subtitle">Endringer i denne versjonen:</string>
+    <string name="cipher">Chiffer</string>
     <string name="confirm_local_dns">Den lokale DNS-serveren fungerer ikke med mindre du aktiverer «Deling av lokalt nettverk» under Innstillinger.</string>
     <string name="confirm_no_email">Problemrapporten blir nå sendt uten en måte for oss å kontakte deg på. Hvis du ønsker svar på rapporten, må du oppgi en e-postadresse.</string>
     <string name="confirm_removal">Ja, logg av enhet</string>
@@ -72,6 +88,7 @@
     <string name="creating_new_account">Oppretter konto ...</string>
     <string name="creating_secure_connection">OPPRETTER SIKKER TILKOBLING</string>
     <string name="critical_error">Kritisk feil (krever din oppmerksomhet)</string>
+    <string name="current_method">Gjeldende: %1$s</string>
     <string name="custom_dns_disable_mode_subtitle">Deaktiver alle &lt;b&gt;%1$s&lt;/b&gt; ovenfor for å aktivere denne innstillingen.</string>
     <string name="custom_dns_footer">Aktiver for å legge til minst én DNS-server.</string>
     <string name="custom_dns_hint">Skriv inn IP</string>
@@ -87,6 +104,8 @@
     <string name="delete_custom_list_confirmation_description">Slette «%1$s»?</string>
     <string name="delete_custom_list_message">«%1$s» ble slettet</string>
     <string name="delete_list">Slett liste</string>
+    <string name="delete_method">Slett metoden</string>
+    <string name="delete_method_question">Slette metoden?</string>
     <string name="device_inactive_description">Du har fjernet denne enheten. For å koble til igjen, må du logge inn på nytt.</string>
     <string name="device_inactive_title">Enheten er inaktiv</string>
     <string name="device_inactive_unblock_warning">Å gå til pålogging vil oppheve blokkeringen av internettet på denne enheten.</string>
@@ -111,9 +130,11 @@
     <string name="edit_lists">Endre lister</string>
     <string name="edit_locations">Endre plasseringer</string>
     <string name="edit_message">Rediger melding</string>
+    <string name="edit_method">Endre metode</string>
     <string name="edit_name">Endre navn</string>
     <string name="enable">Aktiver</string>
     <string name="enable_custom_dns">Bruk egendefinert DNS-server</string>
+    <string name="enable_method">Aktiver metoden</string>
     <string name="enter_value_placeholder">Angi MTU</string>
     <string name="enter_voucher_code">Skriv inn kupongkode</string>
     <string name="error_occurred">Det oppstod en feil.</string>
@@ -125,6 +146,8 @@
     <string name="failed_to_remove_device">Kunne ikke fjerne enhet</string>
     <string name="failed_to_send">Kunne ikke sende</string>
     <string name="failed_to_send_details">Hvis du avslutter skjemaet og prøver igjen senere, vil informasjonen du allerede har lagt inn fortsatt være der.</string>
+    <string name="failed_to_set_current_test_error">Kunne ikke angi til gjeldende – API ikke tilgjengelig</string>
+    <string name="failed_to_set_current_unknown_error">Kunne ikke angi til gjeldende – ukjent årsak</string>
     <string name="faqs_and_guides">Ofte stilte spørsmål og veiledninger</string>
     <string name="filter">Filter</string>
     <string name="filtered">Filtrert:</string>
@@ -176,6 +199,7 @@
     <string name="max_devices_warning_title">For mange enheter</string>
     <string name="mullvad_account_number">Mullvad-kontonummer</string>
     <string name="mullvad_owned_only">Kun eid av Mullvad</string>
+    <string name="name">Navn</string>
     <string name="name_was_changed_to">Navn ble endret til %1$s</string>
     <string name="new_device_notification_message">Velkommen. Denne enheten har fått navnet &lt;b&gt;%1$s&lt;/b&gt;. For å finne ut mer kan du bruke informasjonsknappen under Konto.</string>
     <string name="new_device_notification_title">NY ENHET OPPRETTET</string>
@@ -199,6 +223,8 @@
     <string name="owned">Eid</string>
     <string name="ownership">Eierskap</string>
     <string name="paid_until">Betalt fram til</string>
+    <string name="password">Passord</string>
+    <string name="password_optional">Passord (valgfritt)</string>
     <string name="patch_not_matching_specification">Oppdateringen samsvarer ikke med spesifikasjon</string>
     <string name="pay_to_start_using">For å starte bruken av appen, må du først legge til tid til kontoen.</string>
     <string name="payment_billing_error_dialog_message">Vi kunne ikke starte betalingsprosessen. Kontroller om du har siste versjon av Google Play.</string>
@@ -210,6 +236,8 @@
     <string name="payment_pending_dialog_message">Vi behandler kjøpet. Det kan ta litt tid. Hvis kjøpet blir bekreftet, legges tiden din til.</string>
     <string name="payment_pending_dialog_title">Bekrefter kjøp</string>
     <string name="payment_status_pending">Google Play-betaling venter</string>
+    <string name="please_enter_a_valid_ip_address">Skriv inn en gyldig IPv4- eller IPv6-adresse</string>
+    <string name="please_enter_a_valid_remote_server_port">Skriv inn en gyldig ekstern server-port</string>
     <string name="port">Port</string>
     <string name="privacy_disclaimer_body_first_paragraph">For å sørge for at du har den sikreste appversjonen, og informere deg om eventuelle problemer med den versjonen som kjøres, vil appen automatisk sjekke appversjonen. Appversjonen og Android-systemversjonen blir da sendt til Mullvad-servere. Mullvad registrerer antallet brukte appversjoner og Android-versjoner. Dataen blir aldri lagret eller brukt på noen som helst måte som kan identifisere deg.</string>
     <string name="privacy_disclaimer_body_second_paragraph">Hvis funksjonen delt tunnelering brukes, vil appen be systemet ditt om en liste over alle installerte applikasjoner. Denne listen hentes bare i delt tunnelering-visningen. Listen over installerte apper sendes aldri ut fra enheten.</string>
@@ -245,6 +273,7 @@
     <string name="sent">Sendt</string>
     <string name="sent_contact">Vi vil kontakte deg på %1$s ved behov</string>
     <string name="sent_thanks">Takk!</string>
+    <string name="server">Server</string>
     <string name="server_ip_overrides">Overstyring av server-IP</string>
     <string name="server_ip_overrides_active">Overstyringer aktive</string>
     <string name="server_ip_overrides_import_by">Importer nye overstyringer via</string>
@@ -262,6 +291,7 @@
     <string name="set_firewall_policy_error">Kunne ikke bruke brannmur-regler. Feilsøk eller send inn en problemrapport.</string>
     <string name="settings">Innstillinger</string>
     <string name="settings_account">Konto</string>
+    <string name="settings_api_access">API-tilgang</string>
     <string name="settings_changes_effect_warning_content_blocker">Endringer til DNS-relaterte innstillinger vil kanskje ikke tre i kraft umiddelbart på grunn av bufrede resultater.</string>
     <string name="settings_changes_effect_warning_short">DNS-innstillinger vil kanskje ikke tre i kraft umiddelbart</string>
     <string name="settings_patch_error_failed_to_apply_patch">Kunne ikke bruke oppdatering</string>
@@ -280,18 +310,26 @@
     <string name="submit_button">Send inn</string>
     <string name="switch_location">Bytt plassering</string>
     <string name="tcp">TCP</string>
+    <string name="test_method">Test metoden</string>
+    <string name="testing">Tester ...</string>
+    <string name="testing_name">Tester %1$s ...</string>
+    <string name="this_field_is_required">Feltet er påkrevd</string>
+    <string name="this_is_already_set_as_current">Denne er allerede angitt som gjeldende</string>
     <string name="to_add_locations_to_a_list">Hvis du vil legge til plasseringer i en liste, trykker du på ︙ eller trykker på og holder inne et land, en by eller en server.</string>
     <string name="to_create_a_custom_list">For å opprette en egendefinert liste trykker du på ︙</string>
     <string name="toggle_vpn">Velg VPN</string>
     <string name="top_bar_device_name">Enhetsnavn: %1$s</string>
     <string name="top_bar_time_left">Tid igjen: %1$s</string>
+    <string name="transport_protocol">Transportprotokoll</string>
     <string name="try_again">Prøv på nytt</string>
+    <string name="type">Type</string>
     <string name="udp">UDP</string>
     <string name="udp_over_tcp_port_info">TCP-porten som UDP-over-TCP-tilsløringen skal koble til på VPN-serveren.</string>
     <string name="udp_over_tcp_port_title">UDP-over-TCP-port</string>
     <string name="undo">Angre</string>
     <string name="unsecured">Usikret</string>
     <string name="unsecured_connection">USIKKER TILKOBLING</string>
+    <string name="unsecured_vpn_permission_error">Usikret (ingen VPN-tillatelse)</string>
     <string name="unsupported_version">VERSJON UTEN STØTTE</string>
     <string name="unsupported_version_description">Personvernet ditt kan være i fare med denne appversjonen som ikke støttes. Oppdater nå.</string>
     <string name="unsupported_version_without_upgrade">Du kjører en appversjon som ikke støttes.</string>
@@ -300,8 +338,11 @@
     <string name="update_available_footer">Oppdatering tilgjengelig. Last ned for å oppdatere sikkerheten.</string>
     <string name="update_dns_server_dialog_title">Oppdater DNS-serveren</string>
     <string name="update_list_name">Oppdater listenavn</string>
+    <string name="use_method">Bruk metode</string>
     <string name="user_email_hint">E-post (valgfritt)</string>
     <string name="user_message_hint">For at vi skal kunne hjelpe deg bedre, ber vi deg om å skrive på engelsk eller svensk og fortelle hvilket land du befinner deg i.</string>
+    <string name="username">Brukernavn</string>
+    <string name="verifying_api_method">Bekrefter API-metode ...</string>
     <string name="verifying_voucher">Bekrefter kupong …</string>
     <string name="view_logs">Se applogger</string>
     <string name="virtual_adapter_problem">Virtuell adapterfeil</string>
