--- a/gui/locales/da/messages.po
+++ b/gui/locales/da/messages.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: mullvad-app\n"
 "Language-Team: Danish\n"
 "Language: da_DK\n"
-"PO-Revision-Date: 2024-05-15 07:28\n"
+"PO-Revision-Date: 2024-06-27 08:16\n"
 
 msgid "%(duration)s was added, account paid until %(expiry)s."
 msgstr "%(duration)s blev tilføjet, konto betalt indtil %(expiry)s."
@@ -1097,6 +1097,14 @@ msgid "Disconnected and unsecure"
 msgstr "Frakoblet og usikker"
 
 msgctxt "notifications"
+msgid "Failed to enable split tunneling."
+msgstr "Kunne ikke aktivere split tunneling."
+
+msgctxt "notifications"
+msgid "Failed to enable split tunneling. Please try reconnecting or disable split tunneling."
+msgstr "Kunne ikke aktivere split tunneling. Prøv at oprette forbindelse igen eller deaktiver split tunneling."
+
+msgctxt "notifications"
 msgid "Lockdown mode active, connection blocked"
 msgstr "Låsetilstand aktiv, forbindelse blokeret"
 
@@ -1689,12 +1697,24 @@ msgid "Connecting. %(location)s"
 msgstr "Tilslutter. %(location)s"
 
 msgctxt "troubleshoot"
+msgid "Enable “Full Disk Access” for “Mullvad VPN” in the macOS system settings."
+msgstr "Aktiver \"Fuld diskadgang\" for \"Mullvad VPN\" i macOS-systemindstillingerne."
+
+msgctxt "troubleshoot"
+msgid "Failed to enable split tunneling. This is because the app is missing system permissions. What you can do:"
+msgstr "Kunne ikke aktivere split tunneling. Dette skyldes, at appen mangler systemtilladelser. Hvad du kan gøre:"
+
+msgctxt "troubleshoot"
 msgid "If these steps do not work please send a problem report."
 msgstr "Hvis disse trin ikke virker, bedes du indsende en problemrapport."
 
 msgctxt "troubleshoot"
 msgid "Make sure you have NF tables support."
 msgstr "Sørg for, at der er understøttelse af NFtables."
+
+msgctxt "troubleshoot"
+msgid "Open system settings"
+msgstr "Åbn systemindstillinger"
 
 msgctxt "troubleshoot"
 msgid "This error can happen when something other than Mullvad is actively updating the DNS."
@@ -2098,11 +2118,9 @@ msgstr "Hvilken TCP-port UDP-over-TCP tilsløringsprotokollen skal forbinde til 
 msgid "%s (added)"
 msgstr "%s (tilføjet)"
 
-msgctxt "A location was added to a custom list"
 msgid "%s was added to \"%s\""
 msgstr "%s blev tilføjet til \"%s\""
 
-msgctxt "Shown as a toast when user added e.g 30 days or 3 months of time to their account"
 msgid "%s was added to your account."
 msgstr "%s blev føjet til din konto."
 
@@ -2112,11 +2130,17 @@ msgstr "1. Når du har klikket på knappen <b>Gå til VPN-indstillinger</b> nede
 msgid "2. To enable Auto-connect, click on the toggle next to <b>Always-on VPN</b>."
 msgstr "2. For at aktivere automatisk forbindelse skal du klikke på knappen ud for <b>Altid-til VPN</b>."
 
-msgid "3. To enable Lockdown mode, click on the toggle next to <b>Block connections without VPN</b>."
-msgstr "3. For at aktivere Lockdown-tilstand skal du klikke på knappen ud for <b>Bloker forbindelser uden VPN</b>."
+msgid "3. To enable Lockdown mode, click on the toggle next to <b>Block connections without VPN</b>.<br /><br /><b>Warning: This setting blocks split apps and the Local Network Sharing feature.</b>"
+msgstr "3. For at aktivere Lockdown-tilstand skal du klikke på knappen ud for <b>Bloker forbindelser uden VPN</b>.<br /><br /><b>Advarsel: Denne indstilling blokerer split-apps og funktionen Lokal netværksdeling. </b>"
 
 msgid "30 days was added to your account."
 msgstr "30 dage blev føjet til din konto."
+
+msgid "API reachable, adding method..."
+msgstr "API tilgængelig, tilføjer metode..."
+
+msgid "API unreachable, save method anyway?"
+msgstr "API utilgængelig, gemme metode alligevel?"
 
 msgid "Account credit expires in a few minutes"
 msgstr "Kontokredit udløber om få minutter"
@@ -2127,7 +2151,6 @@ msgstr "Kontokredit udløber snart"
 msgid "Account time reminders"
 msgstr "Påmindelser om kontotid"
 
-msgctxt "Add a Country,City, or Server to a custom list"
 msgid "Add %s to list"
 msgstr "Føj %s til listen"
 
@@ -2142,6 +2165,9 @@ msgstr "Tilføj DNS-server"
 
 msgid "Add locations"
 msgstr "Tilføj placeringer"
+
+msgid "Adding method..."
+msgstr "Tilføjer metode..."
 
 msgid "Agree and continue"
 msgstr "Accepter og fortsæt"
@@ -2161,6 +2187,9 @@ msgstr "Altid-til VPN tildelt en anden app"
 msgid "Always-on VPN might be enabled for another app"
 msgstr "Altid-til VPN er måske aktiveret for en anden app"
 
+msgid "At least one method needs to be enabled"
+msgstr "Mindst én metode skal aktiveres"
+
 msgid "Attention: Split tunneling is a privacy risk."
 msgstr "Bemærk: Split tunneling udgør en privatlivsrisiko."
 
@@ -2178,6 +2207,10 @@ msgstr "Automatisk forbindelse (ældre metode)"
 
 msgid "Auto-connect is called Always-on VPN in the Android system settings and it makes sure you are constantly connected to the VPN tunnel and auto connects after restart."
 msgstr "Auto-tilslutning kaldes Altid-til VPN i Android-systemindstillingerne, og det sørger for, at du konstant er forbundet til VPN-tunnelen og automatisk forbinder efter genstart."
+
+msgctxt "Description of the existing \"auto-connect\" functionality as well as a notification about it being removed/replaced in a future update."
+msgid "Automatically connect when the app launches. This setting will be replaced with a new connect on device start-up feature in a future update."
+msgstr "Tilslut automatisk, når appen starter. Denne indstilling vil blive erstattet med en ny funktion der opretter forbindelse ved opstart af enheden i en fremtidig opdatering."
 
 msgid "Blocking internet (device offline)"
 msgstr "Blokering af internet (enhed offline)"
@@ -2206,6 +2239,10 @@ msgstr "Opret ny liste"
 msgid "Critical error (your attention is required)"
 msgstr "Kritisk fejl (som kræver din opmærksomhed)"
 
+msgctxt "Status information about which method/configuration is actively being used. The placeholder is replaced by a built-in or custom method. For example \"Current: Direct\" or \"Current: MyCustomMethod\". Note that it's not \"current\" as in \"present time\"."
+msgid "Current: %s"
+msgstr "Aktuel: %s"
+
 msgid "Custom DNS server addresses %s are invalid"
 msgstr "Tilpassede DNS-serveradresser %s er ugyldige"
 
@@ -2214,6 +2251,12 @@ msgstr "DNS-indstillinger træder muligvis ikke i kraft med det samme"
 
 msgid "Delete \"%s\"?"
 msgstr "Vil du slette \"%s\"?"
+
+msgid "Delete method"
+msgstr "Slet metode"
+
+msgid "Delete method?"
+msgstr "Vil du slette metoden?"
 
 msgid "Disable all <b>%s</b> above to activate this setting."
 msgstr "Deaktiver alle <b>%s</b> ovenfor for at aktivere denne indstilling."
@@ -2239,6 +2282,9 @@ msgstr "Rediger placeringer"
 msgid "Edit name"
 msgstr "Rediger navn"
 
+msgid "Enable method"
+msgstr "Aktiver metode"
+
 msgid "Enter MTU"
 msgstr "Indtast MTU"
 
@@ -2247,6 +2293,12 @@ msgstr "Ekskluderede applikationer"
 
 msgid "Failed to apply patch"
 msgstr "Det lykkedes ikke at anvende patch"
+
+msgid "Failed to set to current - API not reachable"
+msgstr "Kunne ikke indstilles til aktuel - API ikke tilgængelig"
+
+msgid "Failed to set to current - Unknown reason"
+msgstr "Kunne ikke indstilles til aktuel - Ukendt årsag"
 
 msgid "File"
 msgstr "Fil"
@@ -2332,12 +2384,20 @@ msgstr "Tilsidesættelser ryddet"
 msgid "Overrides inactive"
 msgstr "Tilsidesættelser inaktive"
 
+msgid "Password (optional)"
+msgstr "Adgangskode (valgfrit)"
+
 msgid "Paste or write overrides to be imported"
 msgstr "Indsæt eller skriv tilsidesættelser, der skal importeres"
 
-msgctxt "The patch is a partial settings file that can be applied to the users' list of servers, overriding some of the values for the servers. This is part of Server IP overrides."
 msgid "Patch not matching specification"
 msgstr "Patch matcher ikke specifikationen"
+
+msgid "Please enter a valid IPv4 or IPv6 address"
+msgstr "Indtast en gyldig IPv4- eller IPv6-adresse"
+
+msgid "Please enter a valid remote server port"
+msgstr "Indtast en gyldig fjernserverport"
 
 msgid "Please use the <b>Always-on</b> system setting instead by following the guide in <b>%s</b> above."
 msgstr "Brug systemindstillingen <b>Altid til</b> i stedet ved at følge vejledningen i <b>%s</b> ovenfor."
@@ -2357,7 +2417,6 @@ msgstr "Rekursionsgrænse"
 msgid "Remove"
 msgstr "Fjern"
 
-msgctxt "Remove a Country, City, or Server from a custom list."
 msgid "Remove %s from list"
 msgstr "Fjern %s fra listen"
 
@@ -2397,14 +2456,23 @@ msgstr "Viser påmindelser, når kontotiden er ved at udløbe"
 msgid "Submit"
 msgstr "Indsend"
 
+msgid "Test method"
+msgstr "Testmetode"
+
+msgid "Testing %s..."
+msgstr "Tester %s..."
+
 msgid "Text"
 msgstr "Tekst"
 
 msgid "The Auto-connect and Lockdown mode settings can be found in the Android system settings, follow this guide to enable one or both."
 msgstr "Indstillingerne for automatisk forbindelse og Lockdown-tilstand kan findes i Android- systemindstillingerne. Følg denne vejledning for at aktivere en eller begge."
 
-msgid "The Lockdown mode blocks all internet access if the VPN tunnel is manually disconnected. <br/><b>Warning: This setting blocks split apps and the Local Network Sharing feature</b>."
-msgstr "Lockdown-tilstand blokerer al internetadgang, hvis VPN-tunnelen afbrydes manuelt. <br/><b>Advarsel: Denne indstilling blokerer opdelte apps og funktionen Lokal netværksdeling</b>."
+msgid "The Lockdown mode is called <b>Block connections without VPN</b> in the Android system settings. It helps minimize leaks, however it has some known limitations which you can read more about"
+msgstr "Lockdown-tilstanden kaldes <b>Bloker forbindelser uden VPN</b> i Android-systemindstillingerne. Det hjælper med at minimere lækager, men det har nogle kendte begrænsninger, som du kan læse mere om"
+
+msgid "The \"Current\" method represent which method the app is using to reach the API."
+msgstr "Den \"aktuelle\" metode er den metode, som appen bruger til at nå API'en."
 
 msgid "The local DNS server will not work unless you enable \"Local Network Sharing\" under Preferences."
 msgstr "Den lokale DNS-server fungerer ikke, medmindre du aktiverer \"Lokal netværksdeling\" under Indstillinger."
@@ -2414,6 +2482,12 @@ msgstr "Der er ingen VPN-indstillinger på din enhed"
 
 msgid "This address has already been entered."
 msgstr "Denne adresse er allerede blevet indtastet."
+
+msgid "This field is required"
+msgstr "Dette felt er påkrævet"
+
+msgid "This is already set as current"
+msgstr "Den er allerede indstillet som aktuel"
 
 msgid "To add locations to a list, press the \"︙\" or long press on a country, city, or server."
 msgstr "Tryk på \" ︙ \" eller tryk langvarigt på et land, en by eller en server for at tilføje placeringer til en liste."
@@ -2439,12 +2513,15 @@ msgstr "Kunne ikke starte tunnelforbindelse. Deaktiver Altid-til VPN for <b>%s</
 msgid "Undo"
 msgstr "Fortryd"
 
-msgctxt "Key is refering to a JSON key. The user selected a file or written/pasted a Server IP Override patch that was missing or using an invalid key."
 msgid "Unknown or prohibited key \"%s\""
-msgstr "Ukendt eller forbudt nøgle \"%s\""
+msgstr "Ukendt eller ikke-tilladt nøgle \"%s\""
 
 msgid "Unsecured"
 msgstr "Ikke sikret"
+
+msgctxt "Notification message shown when the app lacks a permission called \"VPN permission\"."
+msgid "Unsecured (No VPN permission)"
+msgstr "Usikret (ingen VPN-tilladelse)"
 
 msgid "Update DNS server"
 msgstr "Opdater DNS-server"
@@ -2454,6 +2531,9 @@ msgstr "Opdatering tilgængelig, download den for at forblive sikker."
 
 msgid "Update list name"
 msgstr "Opdater listenavn"
+
+msgid "Use method"
+msgstr "Brug metode"
 
 msgid "VPN permission error"
 msgstr "VPN-tilladelsesfejl"
@@ -2469,6 +2549,9 @@ msgstr "Gyldig WireGuard-nøgle mangler. Administrer nøgler under Avancerede in
 
 msgid "Valid ranges: %s"
 msgstr "Gyldige områder: %s"
+
+msgid "Verifying API method..."
+msgstr "Bekræfter API-metode..."
 
 msgid "Verifying purchase"
 msgstr "Bekræfter køb"
@@ -2514,6 +2597,10 @@ msgstr "Du kører en ikke-understøttet appversion."
 
 msgid "\"%s\" was deleted"
 msgstr "\"%s\" blev slettet"
+
+msgctxt "Clickable link that leads to our website."
+msgid "here"
+msgstr "her"
 
 msgid "less than a minute ago"
 msgstr "mindre end et minut siden"
