--- a/gui/locales/de/messages.po
+++ b/gui/locales/de/messages.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: mullvad-app\n"
 "Language-Team: German\n"
 "Language: de_DE\n"
-"PO-Revision-Date: 2024-05-15 07:28\n"
+"PO-Revision-Date: 2024-06-27 08:16\n"
 
 msgid "%(duration)s was added, account paid until %(expiry)s."
 msgstr "%(duration)s hinzugefügt. Konto bezahlt bis %(expiry)s."
@@ -1097,6 +1097,14 @@ msgid "Disconnected and unsecure"
 msgstr "Unsicher und nicht verbunden"
 
 msgctxt "notifications"
+msgid "Failed to enable split tunneling."
+msgstr "Split Tunneling konnte nicht aktiviert werden."
+
+msgctxt "notifications"
+msgid "Failed to enable split tunneling. Please try reconnecting or disable split tunneling."
+msgstr "Split Tunneling konnte nicht aktiviert werden. Versuchen Sie, die Verbindung erneut herzustellen oder deaktivieren Sie Split Tunneling."
+
+msgctxt "notifications"
 msgid "Lockdown mode active, connection blocked"
 msgstr "Sperrmodus aktiv, Verbindung blockiert"
 
@@ -1690,12 +1698,24 @@ msgid "Connecting. %(location)s"
 msgstr "Wird verbunden. %(location)s"
 
 msgctxt "troubleshoot"
+msgid "Enable “Full Disk Access” for “Mullvad VPN” in the macOS system settings."
+msgstr "Aktivieren Sie „Voller Festplattenzugriff“ für „Mullvad VPN“ in den macOS-Systemeinstellungen."
+
+msgctxt "troubleshoot"
+msgid "Failed to enable split tunneling. This is because the app is missing system permissions. What you can do:"
+msgstr "Split Tunneling konnte nicht aktiviert werden. Das liegt daran, dass der App Systemberechtigungen fehlen. Was Sie tun können:"
+
+msgctxt "troubleshoot"
 msgid "If these steps do not work please send a problem report."
 msgstr "Falls diese Schritte nicht helfen, senden Sie bitte einen Problembericht."
 
 msgctxt "troubleshoot"
 msgid "Make sure you have NF tables support."
 msgstr "Vergewissern Sie sich, dass Sie nftables unterstützen."
+
+msgctxt "troubleshoot"
+msgid "Open system settings"
+msgstr "Systemeinstellungen öffnen"
 
 msgctxt "troubleshoot"
 msgid "This error can happen when something other than Mullvad is actively updating the DNS."
@@ -2099,11 +2119,9 @@ msgstr "Mit welchem TCP-Port sich das UDP-über-TCP-Verschleierungsprotokoll auf
 msgid "%s (added)"
 msgstr "%s (hinzugefügt)"
 
-msgctxt "A location was added to a custom list"
 msgid "%s was added to \"%s\""
 msgstr "%s wurde zu „%s“ hinzugefügt"
 
-msgctxt "Shown as a toast when user added e.g 30 days or 3 months of time to their account"
 msgid "%s was added to your account."
 msgstr "%s wurde zu Ihrem Konto hinzugefügt."
 
@@ -2113,11 +2131,17 @@ msgstr "1. Nachdem Sie unten auf <b>VPN-Einstellungen öffnen</b> geklickt haben
 msgid "2. To enable Auto-connect, click on the toggle next to <b>Always-on VPN</b>."
 msgstr "2. Um die automatische Verbindung zu aktivieren, klicken Sie auf den Kippschalter neben <b>Always-on VPN</b>."
 
-msgid "3. To enable Lockdown mode, click on the toggle next to <b>Block connections without VPN</b>."
-msgstr "3. Um den Sperrmodus zu aktivieren, klicken Sie auf den Kippschalter neben <b>Verbindungen ohne VPN sperren</b>."
+msgid "3. To enable Lockdown mode, click on the toggle next to <b>Block connections without VPN</b>.<br /><br /><b>Warning: This setting blocks split apps and the Local Network Sharing feature.</b>"
+msgstr "3. Um den Sperrmodus zu aktivieren, klicken Sie auf den Kippschalter neben <b>Verbindungen ohne VPN blockieren</b>.<br /><br /><b>Warnung: Diese Einstellung blockiert geteilte Apps und die Funktion der lokalen Netzwerkfreigabe.</b>"
 
 msgid "30 days was added to your account."
 msgstr "30 Tage wurden zu Ihrem Konto hinzugefügt."
+
+msgid "API reachable, adding method..."
+msgstr "API erreichbar, Methode hinzufügen …"
+
+msgid "API unreachable, save method anyway?"
+msgstr "API nicht erreichbar, Methode dennoch speichern?"
 
 msgid "Account credit expires in a few minutes"
 msgstr "Kontoguthaben läuft in wenigen Minuten ab"
@@ -2128,7 +2152,6 @@ msgstr "Kontoguthaben läuft bald ab"
 msgid "Account time reminders"
 msgstr "Erinnerungen an die Kontozeit"
 
-msgctxt "Add a Country,City, or Server to a custom list"
 msgid "Add %s to list"
 msgstr "%s zur Liste hinzufügen"
 
@@ -2143,6 +2166,9 @@ msgstr "DNS-Server hinzufügen"
 
 msgid "Add locations"
 msgstr "Standorte hinzufügen"
+
+msgid "Adding method..."
+msgstr "Methode hinzufügen …"
 
 msgid "Agree and continue"
 msgstr "Akzeptieren und weiter"
@@ -2162,6 +2188,9 @@ msgstr "Always-on VPN ist einer anderen App zugeordnet"
 msgid "Always-on VPN might be enabled for another app"
 msgstr "Always-on VPN könnte für eine andere App aktiviert sein"
 
+msgid "At least one method needs to be enabled"
+msgstr "Mindestens eine Methode muss aktiviert sein"
+
 msgid "Attention: Split tunneling is a privacy risk."
 msgstr "Achtung! Split Tunneling birgt ein Datenschutzrisiko."
 
@@ -2179,6 +2208,10 @@ msgstr "Automatische Verbindung (veraltet)"
 
 msgid "Auto-connect is called Always-on VPN in the Android system settings and it makes sure you are constantly connected to the VPN tunnel and auto connects after restart."
 msgstr "Die automatische Verbindung wird in den Android-Systemeinstellungen als „Always-on VPN“ bezeichnet und sorgt dafür, dass Sie ständig mit dem VPN-Tunnel verbunden sind und sich nach einem Neustart automatisch verbinden."
+
+msgctxt "Description of the existing \"auto-connect\" functionality as well as a notification about it being removed/replaced in a future update."
+msgid "Automatically connect when the app launches. This setting will be replaced with a new connect on device start-up feature in a future update."
+msgstr "Automatisch verbinden, wenn die App gestartet wird. Diese Einstellung wird in einem zukünftigen Update durch eine neue Funktion zum Verbinden beim Gerätestart ersetzt."
 
 msgid "Blocking internet (device offline)"
 msgstr "Internet sperren (Gerät offline)"
@@ -2207,6 +2240,10 @@ msgstr "Neue Liste erstellen"
 msgid "Critical error (your attention is required)"
 msgstr "Kritischer Fehler (Ihre Aufmerksamkeit ist erforderlich)"
 
+msgctxt "Status information about which method/configuration is actively being used. The placeholder is replaced by a built-in or custom method. For example \"Current: Direct\" or \"Current: MyCustomMethod\". Note that it's not \"current\" as in \"present time\"."
+msgid "Current: %s"
+msgstr "Aktuell: %s"
+
 msgid "Custom DNS server addresses %s are invalid"
 msgstr "Eigene DNS-Server Adressen %s sind ungültig"
 
@@ -2215,6 +2252,12 @@ msgstr "Die DNS-Einstellungen werden möglicherweise nicht sofort wirksam"
 
 msgid "Delete \"%s\"?"
 msgstr "„%s“ löschen?"
+
+msgid "Delete method"
+msgstr "Methode löschen"
+
+msgid "Delete method?"
+msgstr "Methode löschen?"
 
 msgid "Disable all <b>%s</b> above to activate this setting."
 msgstr "Deaktivieren Sie oben alle <b>%s</b>, um diese Einstellung zu aktivieren."
@@ -2240,6 +2283,9 @@ msgstr "Standorte bearbeiten"
 msgid "Edit name"
 msgstr "Name bearbeiten"
 
+msgid "Enable method"
+msgstr "Methode aktivieren"
+
 msgid "Enter MTU"
 msgstr "MTU eingeben"
 
@@ -2248,6 +2294,12 @@ msgstr "Ausgeschlossene Anwendungen"
 
 msgid "Failed to apply patch"
 msgstr "Patch konnte nicht angewendet werden"
+
+msgid "Failed to set to current - API not reachable"
+msgstr "Konnte nicht als aktuelle gesetzt werden – API nicht erreichbar"
+
+msgid "Failed to set to current - Unknown reason"
+msgstr "Konnte nicht als aktuelle gesetzt werden – Unbekannter Grund"
 
 msgid "File"
 msgstr "Datei"
@@ -2333,12 +2385,20 @@ msgstr "Überschreibungen entfernt"
 msgid "Overrides inactive"
 msgstr "Überschreibungen inaktiv"
 
+msgid "Password (optional)"
+msgstr "Passwort (optional)"
+
 msgid "Paste or write overrides to be imported"
 msgstr "Zu importierende Überschreibungen einfügen oder eingeben"
 
-msgctxt "The patch is a partial settings file that can be applied to the users' list of servers, overriding some of the values for the servers. This is part of Server IP overrides."
 msgid "Patch not matching specification"
 msgstr "Patch entspricht nicht der Spezifikation"
+
+msgid "Please enter a valid IPv4 or IPv6 address"
+msgstr "Bitte geben Sie eine gültige IPv4- oder IPv6-Adresse ein"
+
+msgid "Please enter a valid remote server port"
+msgstr "Bitte geben Sie einen gültigen Remote-Server-Port ein"
 
 msgid "Please use the <b>Always-on</b> system setting instead by following the guide in <b>%s</b> above."
 msgstr "Bitte verwenden Sie stattdessen die Systemeinstellung <b>Always-on (Durchgehend aktiv)</b>, indem Sie die Anleitung oben unter <b>%s</b> befolgen."
@@ -2358,7 +2418,6 @@ msgstr "Rekursionslimit"
 msgid "Remove"
 msgstr "Entfernen"
 
-msgctxt "Remove a Country, City, or Server from a custom list."
 msgid "Remove %s from list"
 msgstr "%s aus Liste entfernen"
 
@@ -2398,14 +2457,23 @@ msgstr "Erinnerungen anzeigen, wenn die Kontozeit bald abläuft"
 msgid "Submit"
 msgstr "Absenden"
 
+msgid "Test method"
+msgstr "Methode testen"
+
+msgid "Testing %s..."
+msgstr "%s testen …"
+
 msgid "Text"
 msgstr "Text"
 
 msgid "The Auto-connect and Lockdown mode settings can be found in the Android system settings, follow this guide to enable one or both."
 msgstr "Die Einstellungen für die automatische Verbindung und den Sperrmodus finden Sie in den Android-Systemeinstellungen. Folgen Sie dieser Anleitung, um eine oder beide Einstellungen zu aktivieren."
 
-msgid "The Lockdown mode blocks all internet access if the VPN tunnel is manually disconnected. <br/><b>Warning: This setting blocks split apps and the Local Network Sharing feature</b>."
-msgstr "Der Sperrmodus blockiert den gesamten Internetzugang, wenn die Verbindung zum VPN-Tunnel manuell unterbrochen wird. <br/><b>Warnung: Diese Einstellung blockiert geteilte Anwendungen und das Teilen im lokalen Netzwerk</b>."
+msgid "The Lockdown mode is called <b>Block connections without VPN</b> in the Android system settings. It helps minimize leaks, however it has some known limitations which you can read more about"
+msgstr "Der Sperrmodus heißt in den Android-Systemeinstellungen <b>Verbindungen ohne VPN blockieren</b>. Dieser trägt dazu bei, Lecks zu minimieren, hat jedoch einige bekannte Einschränkungen. Mehr dazu finden Sie"
+
+msgid "The \"Current\" method represent which method the app is using to reach the API."
+msgstr "Die „aktuelle“ Methode gibt an, welche Methode die App verwendet, um die API zu erreichen."
 
 msgid "The local DNS server will not work unless you enable \"Local Network Sharing\" under Preferences."
 msgstr "Der lokale DNS-Server wird nicht funktionieren, solange „Teilen im lokalen Netzwerk“ nicht in den Einstellungen aktiviert ist."
@@ -2415,6 +2483,12 @@ msgstr "Es gibt keine VPN-Einstellungen auf Ihrem Gerät"
 
 msgid "This address has already been entered."
 msgstr "Diese Adresse wurde bereits eingetragen."
+
+msgid "This field is required"
+msgstr "Dieses Feld ist erforderlich"
+
+msgid "This is already set as current"
+msgstr "Diese ist bereits die aktuelle"
 
 msgid "To add locations to a list, press the \"︙\" or long press on a country, city, or server."
 msgstr "Um Standorte zu einer Liste hinzuzufügen, drücken Sie auf „︙“ oder drücken Sie lange auf ein Land, eine Stadt oder einen Server."
@@ -2440,12 +2514,15 @@ msgstr "Tunnelverbindung kann nicht gestartet werden. Bitte deaktivieren Sie Alw
 msgid "Undo"
 msgstr "Rückgängig"
 
-msgctxt "Key is refering to a JSON key. The user selected a file or written/pasted a Server IP Override patch that was missing or using an invalid key."
 msgid "Unknown or prohibited key \"%s\""
 msgstr "Unbekannter oder verbotener Schlüssel „%s“"
 
 msgid "Unsecured"
 msgstr "Ungesichert"
+
+msgctxt "Notification message shown when the app lacks a permission called \"VPN permission\"."
+msgid "Unsecured (No VPN permission)"
+msgstr "Ungesichert (keine VPN-Berechtigung)"
 
 msgid "Update DNS server"
 msgstr "DNS-Server aktualisieren"
@@ -2455,6 +2532,9 @@ msgstr "Update verfügbar, laden Sie es herunter, um sicher zu bleiben."
 
 msgid "Update list name"
 msgstr "Name der Liste ändern"
+
+msgid "Use method"
+msgstr "Methode verwenden"
 
 msgid "VPN permission error"
 msgstr "VPN-Berechtigungsfehler"
@@ -2470,6 +2550,9 @@ msgstr "Gültiger WireGuard-Schlüssel fehlt. Sie können Ihre Schlüssel in den
 
 msgid "Valid ranges: %s"
 msgstr "Gültige Bereiche: %s"
+
+msgid "Verifying API method..."
+msgstr "API-Methode verifizieren …"
 
 msgid "Verifying purchase"
 msgstr "Kauf verifizieren"
@@ -2515,6 +2598,10 @@ msgstr "Sie verwenden eine nicht unterstützte Version der App. "
 
 msgid "\"%s\" was deleted"
 msgstr "„%s“ wurde gelöscht"
+
+msgctxt "Clickable link that leads to our website."
+msgid "here"
+msgstr "hier"
 
 msgid "less than a minute ago"
 msgstr "vor weniger als einer Minute"
