--- a/gui/locales/fi/messages.po
+++ b/gui/locales/fi/messages.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: mullvad-app\n"
 "Language-Team: Finnish\n"
 "Language: fi_FI\n"
-"PO-Revision-Date: 2024-05-15 07:28\n"
+"PO-Revision-Date: 2024-06-27 08:16\n"
 
 msgid "%(duration)s was added, account paid until %(expiry)s."
 msgstr "%(duration)s lisättiin: tilin käyttö maksettu %(expiry)s asti."
@@ -1097,6 +1097,14 @@ msgid "Disconnected and unsecure"
 msgstr "Yhteys katkaistu ja suojaamaton"
 
 msgctxt "notifications"
+msgid "Failed to enable split tunneling."
+msgstr "Sovelluskohtaisen yhdistämisen käyttöönotto epäonnistui."
+
+msgctxt "notifications"
+msgid "Failed to enable split tunneling. Please try reconnecting or disable split tunneling."
+msgstr "Sovelluskohtaisen yhdistämisen käyttöönotto epäonnistui. Yritä muodostaa yhteys uudelleen tai poista sovelluskohtainen yhdistäminen käytöstä."
+
+msgctxt "notifications"
 msgid "Lockdown mode active, connection blocked"
 msgstr "Lukitustila on käytössä ja yhteys estetty"
 
@@ -1689,12 +1697,24 @@ msgid "Connecting. %(location)s"
 msgstr "Yhdistetään. %(location)s"
 
 msgctxt "troubleshoot"
+msgid "Enable “Full Disk Access” for “Mullvad VPN” in the macOS system settings."
+msgstr "Ota käyttöön \"Täysi levyn käyttöoikeus\" Mullvad VPN:lle macOS:n järjestelmäasetuksista."
+
+msgctxt "troubleshoot"
+msgid "Failed to enable split tunneling. This is because the app is missing system permissions. What you can do:"
+msgstr "Sovelluskohtaisen yhdistämisen käyttöönotto epäonnistui. Tämä johtuu siitä, että sovellukselta puuttuvat järjestelmän käyttöoikeudet. Mitä voit tehdä:"
+
+msgctxt "troubleshoot"
 msgid "If these steps do not work please send a problem report."
 msgstr "Jos ongelma ei ratkea näillä ohjeilla, lähetä siitä raportti."
 
 msgctxt "troubleshoot"
 msgid "Make sure you have NF tables support."
 msgstr "Varmista, että käytössäsi on Nftables-tuki."
+
+msgctxt "troubleshoot"
+msgid "Open system settings"
+msgstr "Avaa järjestelmäasetukset"
 
 msgctxt "troubleshoot"
 msgid "This error can happen when something other than Mullvad is actively updating the DNS."
@@ -2098,13 +2118,11 @@ msgstr "Määrittää, mihin VPN-palvelimen TCP-porttiin \"UDP TCP:n kautta\" -h
 msgid "%s (added)"
 msgstr "%s (lisätty)"
 
-msgctxt "A location was added to a custom list"
 msgid "%s was added to \"%s\""
-msgstr "%s lisättiin luetteloon \"%s\""
+msgstr "%s lisättiin luetteloon\"%s\""
 
-msgctxt "Shown as a toast when user added e.g 30 days or 3 months of time to their account"
 msgid "%s was added to your account."
-msgstr "Tilillesi lisättiin %s käyttöaikaa."
+msgstr "%s lisättiin tilillesi."
 
 msgid "1. After clicking on the <b>Go to VPN settings</b> button below, click on the cogwheel next to the <b>Mullvad VPN</b> name."
 msgstr "1. Napsautettuasi alla olevaa <b>Siirry VPN-asetuksiin</b> -painiketta napsauta <b>Mullvad VPN:n</b> nimen vierestä löytyvää hammaspyöräkuvaketta."
@@ -2112,11 +2130,17 @@ msgstr "1. Napsautettuasi alla olevaa <b>Siirry VPN-asetuksiin</b> -painiketta n
 msgid "2. To enable Auto-connect, click on the toggle next to <b>Always-on VPN</b>."
 msgstr "2. Ota automaattinen yhteyden muodostus käyttöön napsauttamalla <b>Aina päällä oleva VPN</b> -kohdan vieressä olevaa valintapainiketta."
 
-msgid "3. To enable Lockdown mode, click on the toggle next to <b>Block connections without VPN</b>."
-msgstr "3. Ota lukitustila käyttöön napsauttamalla <b>Estä yhteydet ilman VPN:ää</b> -kohdan vierestä löytyvää valintapainiketta."
+msgid "3. To enable Lockdown mode, click on the toggle next to <b>Block connections without VPN</b>.<br /><br /><b>Warning: This setting blocks split apps and the Local Network Sharing feature.</b>"
+msgstr "3. Ota lukitustila käyttöön napsauttamalla kohdan <b>Estä yhteydet ilman VPN:ää</b> vieressä olevaa kytkintä.<br /><br /><b>Varoitus: Tämä asetus estää jaetut sovellukset ja paikallisen verkon jakamisominaisuuden.</b>"
 
 msgid "30 days was added to your account."
 msgstr "Tilillesi lisättiin 30 päivää käyttöaikaa."
+
+msgid "API reachable, adding method..."
+msgstr "API tavoitettavissa, menetelmää lisätään..."
+
+msgid "API unreachable, save method anyway?"
+msgstr "API ei ole tavoitettavissa. Tallennetaanko menetelmä silti?"
 
 msgid "Account credit expires in a few minutes"
 msgstr "Tilin käyttöaika päättyy muutaman minuutin kuluttua"
@@ -2127,7 +2151,6 @@ msgstr "Tilin käyttöaika päättyy pian"
 msgid "Account time reminders"
 msgstr "Muistutukset tilin käyttöajasta"
 
-msgctxt "Add a Country,City, or Server to a custom list"
 msgid "Add %s to list"
 msgstr "Lisää %s luetteloon"
 
@@ -2142,6 +2165,9 @@ msgstr "Lisää DNS-palvelin"
 
 msgid "Add locations"
 msgstr "Lisää sijainteja"
+
+msgid "Adding method..."
+msgstr "Lisätään menetelmää..."
 
 msgid "Agree and continue"
 msgstr "Hyväksy ja jatka"
@@ -2161,6 +2187,9 @@ msgstr "Aina päällä oleva VPN on määritetty toiselle sovellukselle"
 msgid "Always-on VPN might be enabled for another app"
 msgstr "Aina päällä oleva VPN on mahdollisesti otettu käyttöön toiselle sovellukselle"
 
+msgid "At least one method needs to be enabled"
+msgstr "Vähintään yhden menetelmän on oltava käytössä"
+
 msgid "Attention: Split tunneling is a privacy risk."
 msgstr "Huomio: sovelluskohtainen yhdistäminen on tietosuojariski."
 
@@ -2178,6 +2207,10 @@ msgstr "Autom. yhdistäminen (vanha järjestelmä)"
 
 msgid "Auto-connect is called Always-on VPN in the Android system settings and it makes sure you are constantly connected to the VPN tunnel and auto connects after restart."
 msgstr "Automaattista yhdistämistä kutsutaan aina päällä olevaksi VPN-yhteydeksi Androidin järjestelmäasetuksissa. Se varmistaa, että olet jatkuvasti yhteydessä VPN-tunneliin, sekä muodostaa yhteyden automaattisesti aina uudelleenkäynnistyksen jälkeen."
+
+msgctxt "Description of the existing \"auto-connect\" functionality as well as a notification about it being removed/replaced in a future update."
+msgid "Automatically connect when the app launches. This setting will be replaced with a new connect on device start-up feature in a future update."
+msgstr "Yhdistä automaattisesti, kun sovellus käynnistyy. Tämä asetus korvataan tulevassa päivityksessä uusi yhteys laitteen käynnistyessä -ominaisuudella."
 
 msgid "Blocking internet (device offline)"
 msgstr "Internetyhteys on estetty (laite on offline-tilassa)"
@@ -2206,6 +2239,10 @@ msgstr "Luo uusi luettelo"
 msgid "Critical error (your attention is required)"
 msgstr "Vakava virhe (vaatii huomiotasi)"
 
+msgctxt "Status information about which method/configuration is actively being used. The placeholder is replaced by a built-in or custom method. For example \"Current: Direct\" or \"Current: MyCustomMethod\". Note that it's not \"current\" as in \"present time\"."
+msgid "Current: %s"
+msgstr "Nykyinen: %s"
+
 msgid "Custom DNS server addresses %s are invalid"
 msgstr "Mukautetut DNS-palvelimen osoitteet %s ovat virheellisiä"
 
@@ -2214,6 +2251,12 @@ msgstr "Uudet DNS-asetukset eivät välttämättä astu voimaan välittömästi"
 
 msgid "Delete \"%s\"?"
 msgstr "Poistetaanko \"%s\"?"
+
+msgid "Delete method"
+msgstr "Poista menetelmä"
+
+msgid "Delete method?"
+msgstr "Poista menetelmä?"
 
 msgid "Disable all <b>%s</b> above to activate this setting."
 msgstr "Ota tämä asetus käyttöön poistamalla kaikki <b>%s</b> käytöstä yllä."
@@ -2239,6 +2282,9 @@ msgstr "Muokkaa sijainteja"
 msgid "Edit name"
 msgstr "Muokkaa nimeä"
 
+msgid "Enable method"
+msgstr "Ota menetelmä käyttöön"
+
 msgid "Enter MTU"
 msgstr "Syötä MTU"
 
@@ -2247,6 +2293,12 @@ msgstr "Poissuljetut sovellukset"
 
 msgid "Failed to apply patch"
 msgstr "Muutostiedoston käyttöönotto ei onnistunut"
+
+msgid "Failed to set to current - API not reachable"
+msgstr "Nykyisen asetus epäonnistui – APIa ei tavoiteta"
+
+msgid "Failed to set to current - Unknown reason"
+msgstr "Nykyisen asetus epäonnistui – Tuntematon syy"
 
 msgid "File"
 msgstr "Tiedosto"
@@ -2332,12 +2384,20 @@ msgstr "Ohitukset on poistettu"
 msgid "Overrides inactive"
 msgstr "Ohituksia ei ole käytössä"
 
+msgid "Password (optional)"
+msgstr "Salasana (valinnainen)"
+
 msgid "Paste or write overrides to be imported"
 msgstr "Liitä tai kirjoita ohitukset, jotka haluat tuoda"
 
-msgctxt "The patch is a partial settings file that can be applied to the users' list of servers, overriding some of the values for the servers. This is part of Server IP overrides."
 msgid "Patch not matching specification"
 msgstr "Muutostiedosto ei vastaa määritelmää"
+
+msgid "Please enter a valid IPv4 or IPv6 address"
+msgstr "Anna kelvollinen IPv4- tai IPv6-osoite"
+
+msgid "Please enter a valid remote server port"
+msgstr "Anna kelvollinen etäpalvelimen portti"
 
 msgid "Please use the <b>Always-on</b> system setting instead by following the guide in <b>%s</b> above."
 msgstr "Käytä <b>aina käytössä</b> -järjestelmäasetusta seuraamalla ylhäältä löytyvää opasta aiheesta <b>%s</b>."
@@ -2357,7 +2417,6 @@ msgstr "Toistorajoitus"
 msgid "Remove"
 msgstr "Poista"
 
-msgctxt "Remove a Country, City, or Server from a custom list."
 msgid "Remove %s from list"
 msgstr "Poista %s luettelosta"
 
@@ -2397,14 +2456,23 @@ msgstr "Näyttää muistutuksia, kun tilin käyttöaika on umpeutumassa"
 msgid "Submit"
 msgstr "Lähetä"
 
+msgid "Test method"
+msgstr "Testaa menetelmä"
+
+msgid "Testing %s..."
+msgstr "Testataan menetelmää %s..."
+
 msgid "Text"
 msgstr "Teksti"
 
 msgid "The Auto-connect and Lockdown mode settings can be found in the Android system settings, follow this guide to enable one or both."
 msgstr "Automaattisen yhdistämisen ja lukitustilan asetukset löytyvät Androidin järjestelmäasetuksista. Voit ottaa jommankumman tai molemmat käyttöön tämän oppaan ohjeilla."
 
-msgid "The Lockdown mode blocks all internet access if the VPN tunnel is manually disconnected. <br/><b>Warning: This setting blocks split apps and the Local Network Sharing feature</b>."
-msgstr "Lukitustila estää kaikki verkkoyhteydet, jos yhteys VPN-tunneliin katkaistaan manuaalisesti. <br/><b>Varoitus: asetus estää sovelluskohtaisesti yhdistettävät sovellukset ja paikallisen verkon jakamisominaisuuden</b>."
+msgid "The Lockdown mode is called <b>Block connections without VPN</b> in the Android system settings. It helps minimize leaks, however it has some known limitations which you can read more about"
+msgstr "Lukitustilaa kutsutaan Android-järjestelmäasetuksissa nimellä <b>Estä yhteydet ilman VPN:ää</b>. Se auttaa minimoimaan vuodot, mutta sillä on joitain tunnettuja rajoituksia, joista voit lukea lisää"
+
+msgid "The \"Current\" method represent which method the app is using to reach the API."
+msgstr "\"Nykyinen\" menetelmä edustaa sitä, mitä menetelmää sovellus käyttää APIn tavoittamiseen."
 
 msgid "The local DNS server will not work unless you enable \"Local Network Sharing\" under Preferences."
 msgstr "Paikallinen DNS-palvelin ei toimi, ellet ota paikallisen verkon jakamisasetusta käyttöön asetuksissa."
@@ -2414,6 +2482,12 @@ msgstr "Laitteessasi ei ole VPN-asetuksia"
 
 msgid "This address has already been entered."
 msgstr "Tämä osoite on annettu jo."
+
+msgid "This field is required"
+msgstr "Tämä kenttä on pakollinen"
+
+msgid "This is already set as current"
+msgstr "Tämä on jo asetettu nykyiseksi"
 
 msgid "To add locations to a list, press the \"︙\" or long press on a country, city, or server."
 msgstr "Jos haluat lisätä luetteloon sijainteja, paina \"︙\" tai paina pitkään maata, kaupunkia tai palvelinta."
@@ -2439,12 +2513,15 @@ msgstr "Tunneliyhteyden käynnistäminen ei onnistu. Poista aina päällä oleva
 msgid "Undo"
 msgstr "Kumoa"
 
-msgctxt "Key is refering to a JSON key. The user selected a file or written/pasted a Server IP Override patch that was missing or using an invalid key."
 msgid "Unknown or prohibited key \"%s\""
 msgstr "Tuntematon tai kielletty avain \"%s\""
 
 msgid "Unsecured"
 msgstr "Suojaamaton"
+
+msgctxt "Notification message shown when the app lacks a permission called \"VPN permission\"."
+msgid "Unsecured (No VPN permission)"
+msgstr "Suojaamaton (ei VPN-käyttöoikeutta)"
 
 msgid "Update DNS server"
 msgstr "Päivitä DNS-palvelin"
@@ -2454,6 +2531,9 @@ msgstr "Päivitys saatavilla. Lataa se pysyäksesi suojattuna."
 
 msgid "Update list name"
 msgstr "Päivitä luettelon nimi"
+
+msgid "Use method"
+msgstr "Käytä menetelmä"
 
 msgid "VPN permission error"
 msgstr "VPN-lupavirhe"
@@ -2469,6 +2549,9 @@ msgstr "Käypä WireGuard-avain puuttuu. Voit hallinnoida avaimia lisäasetuksis
 
 msgid "Valid ranges: %s"
 msgstr "Kelvolliset portit: %s"
+
+msgid "Verifying API method..."
+msgstr "Vahvistetaan API-menetelmää..."
 
 msgid "Verifying purchase"
 msgstr "Ostoksen vahvistaminen"
@@ -2514,6 +2597,10 @@ msgstr "Sovellusversiotasi ei tueta."
 
 msgid "\"%s\" was deleted"
 msgstr "\"%s\" poistettiin"
+
+msgctxt "Clickable link that leads to our website."
+msgid "here"
+msgstr "tästä"
 
 msgid "less than a minute ago"
 msgstr "alle minuutti sitten"
