--- a/gui/locales/fr/messages.po
+++ b/gui/locales/fr/messages.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: mullvad-app\n"
 "Language-Team: French\n"
 "Language: fr_FR\n"
-"PO-Revision-Date: 2024-05-15 07:28\n"
+"PO-Revision-Date: 2024-06-27 08:16\n"
 
 msgid "%(duration)s was added, account paid until %(expiry)s."
 msgstr "%(duration)s ont été ajouté(es), compte payé jusqu’au %(expiry)s."
@@ -1097,6 +1097,14 @@ msgid "Disconnected and unsecure"
 msgstr "Déconnecté et non sécurisé"
 
 msgctxt "notifications"
+msgid "Failed to enable split tunneling."
+msgstr "Échec de l'activation du split tunneling."
+
+msgctxt "notifications"
+msgid "Failed to enable split tunneling. Please try reconnecting or disable split tunneling."
+msgstr "Échec de l'activation du split tunneling. Veuillez essayer de vous reconnecter ou de désactiver le split tunneling."
+
+msgctxt "notifications"
 msgid "Lockdown mode active, connection blocked"
 msgstr "Mode verrouillage actif, connexion bloquée"
 
@@ -1689,12 +1697,24 @@ msgid "Connecting. %(location)s"
 msgstr "Connexion. %(location)s"
 
 msgctxt "troubleshoot"
+msgid "Enable “Full Disk Access” for “Mullvad VPN” in the macOS system settings."
+msgstr "Activez « Accès complet au disque » pour « Mullvad VPN » dans les paramètres système de macOS."
+
+msgctxt "troubleshoot"
+msgid "Failed to enable split tunneling. This is because the app is missing system permissions. What you can do:"
+msgstr "Échec de l'activation du split tunneling. Cela est dû au fait que l'application ne dispose pas des autorisations système nécessaires. Ce que vous pouvez faire :"
+
+msgctxt "troubleshoot"
 msgid "If these steps do not work please send a problem report."
 msgstr "Si ces étapes ne fonctionnent pas, veuillez envoyer un rapport de problème."
 
 msgctxt "troubleshoot"
 msgid "Make sure you have NF tables support."
 msgstr "Assurez-vous que Nftables est pris en charge."
+
+msgctxt "troubleshoot"
+msgid "Open system settings"
+msgstr "Ouvrir les paramètres système"
 
 msgctxt "troubleshoot"
 msgid "This error can happen when something other than Mullvad is actively updating the DNS."
@@ -2098,13 +2118,11 @@ msgstr "Le port TCP auquel le protocole de dissimulation UDP sur TCP doit se con
 msgid "%s (added)"
 msgstr "%s (ajouté)"
 
-msgctxt "A location was added to a custom list"
 msgid "%s was added to \"%s\""
 msgstr "%s a été ajouté à « %s »"
 
-msgctxt "Shown as a toast when user added e.g 30 days or 3 months of time to their account"
 msgid "%s was added to your account."
-msgstr "%s ajouté(s) à votre compte."
+msgstr "%s a été ajouté à votre compte."
 
 msgid "1. After clicking on the <b>Go to VPN settings</b> button below, click on the cogwheel next to the <b>Mullvad VPN</b> name."
 msgstr "1. Après avoir cliqué sur le bouton <b>Aller aux paramètres VPN</b> ci-dessous, cliquez sur l'engrenage à côté du nom <b>Mullvad VPN</b>."
@@ -2112,11 +2130,17 @@ msgstr "1. Après avoir cliqué sur le bouton <b>Aller aux paramètres VPN</b> c
 msgid "2. To enable Auto-connect, click on the toggle next to <b>Always-on VPN</b>."
 msgstr "2. Pour activer la connexion automatique, cliquez sur l'interrupteur situé à côté de <b>VPN toujours actif</b>."
 
-msgid "3. To enable Lockdown mode, click on the toggle next to <b>Block connections without VPN</b>."
-msgstr "3. Pour activer le mode Verrouillage, cliquez sur l'interrupteur situé à côté de <b>Bloquer les connexions sans VPN</b>."
+msgid "3. To enable Lockdown mode, click on the toggle next to <b>Block connections without VPN</b>.<br /><br /><b>Warning: This setting blocks split apps and the Local Network Sharing feature.</b>"
+msgstr "3. Pour activer le mode Verrouillage, cliquez sur l'interrupteur situé à côté de <b>Bloquer les connexions sans VPN</b>.<br /><br /><b>Avertissement : ce paramètre bloque les applications fractionnées et la fonctionnalité de partage du réseau local.</b>"
 
 msgid "30 days was added to your account."
 msgstr "30 jours ont été ajoutés à votre compte."
+
+msgid "API reachable, adding method..."
+msgstr "API joignable, ajout de la méthode..."
+
+msgid "API unreachable, save method anyway?"
+msgstr "API injoignable, enregistrer quand même la méthode ?"
 
 msgid "Account credit expires in a few minutes"
 msgstr "Les crédits du compte expirent dans quelques minutes"
@@ -2127,7 +2151,6 @@ msgstr "Les crédits du compte expirent bientôt"
 msgid "Account time reminders"
 msgstr "Rappels de temps pour le compte"
 
-msgctxt "Add a Country,City, or Server to a custom list"
 msgid "Add %s to list"
 msgstr "Ajouter %s à la liste"
 
@@ -2142,6 +2165,9 @@ msgstr "Ajouter un serveur DNS"
 
 msgid "Add locations"
 msgstr "Ajouter des localisations"
+
+msgid "Adding method..."
+msgstr "Ajout de la méthode..."
 
 msgid "Agree and continue"
 msgstr "Accepter et continuer"
@@ -2161,6 +2187,9 @@ msgstr "« Toujours exiger un VPN » est assigné à une autre application"
 msgid "Always-on VPN might be enabled for another app"
 msgstr "« Toujours exiger un VPN » est peut-être activé pour une autre application"
 
+msgid "At least one method needs to be enabled"
+msgstr "Au moins une méthode doit être activée"
+
 msgid "Attention: Split tunneling is a privacy risk."
 msgstr "Attention : le split tunneling est un risque de confidentialité."
 
@@ -2178,6 +2207,10 @@ msgstr "Connexion automatique (obsolète)"
 
 msgid "Auto-connect is called Always-on VPN in the Android system settings and it makes sure you are constantly connected to the VPN tunnel and auto connects after restart."
 msgstr "La connexion automatique est appelée VPN toujours actif dans les paramètres du système Android et elle s'assure que vous êtes constamment connecté au tunnel VPN et se connecte automatiquement après le redémarrage."
+
+msgctxt "Description of the existing \"auto-connect\" functionality as well as a notification about it being removed/replaced in a future update."
+msgid "Automatically connect when the app launches. This setting will be replaced with a new connect on device start-up feature in a future update."
+msgstr "Se connecter automatiquement au lancement de l'application. Ce paramètre sera remplacé par une nouvelle fonctionnalité de connexion au démarrage de l'appareil dans une prochaine mise à jour."
 
 msgid "Blocking internet (device offline)"
 msgstr "Internet bloqué (appareil hors ligne)"
@@ -2206,6 +2239,10 @@ msgstr "Créer une nouvelle liste"
 msgid "Critical error (your attention is required)"
 msgstr "Erreur critique (votre attention est requise)"
 
+msgctxt "Status information about which method/configuration is actively being used. The placeholder is replaced by a built-in or custom method. For example \"Current: Direct\" or \"Current: MyCustomMethod\". Note that it's not \"current\" as in \"present time\"."
+msgid "Current: %s"
+msgstr "Actuel : %s"
+
 msgid "Custom DNS server addresses %s are invalid"
 msgstr "Les adresses de serveur DNS personnalisées %s ne sont pas valides"
 
@@ -2214,6 +2251,12 @@ msgstr "Les paramètres DNS peuvent ne pas être immédiatement pris en compte"
 
 msgid "Delete \"%s\"?"
 msgstr "Supprimer « %s » ?"
+
+msgid "Delete method"
+msgstr "Supprimer la méthode"
+
+msgid "Delete method?"
+msgstr "Supprimer la méthode ?"
 
 msgid "Disable all <b>%s</b> above to activate this setting."
 msgstr "Désactivez tous les <b>%s</b> ci-dessus pour activer ce paramètre."
@@ -2239,6 +2282,9 @@ msgstr "Modifier les localisations"
 msgid "Edit name"
 msgstr "Modifier le nom"
 
+msgid "Enable method"
+msgstr "Activer la méthode"
+
 msgid "Enter MTU"
 msgstr "Saisir le MTU"
 
@@ -2247,6 +2293,12 @@ msgstr "Applications exclues"
 
 msgid "Failed to apply patch"
 msgstr "Impossible d'appliquer le correctif"
+
+msgid "Failed to set to current - API not reachable"
+msgstr "Impossible de définir sur la méthode actuelle - API injoignable"
+
+msgid "Failed to set to current - Unknown reason"
+msgstr "Impossible de définir sur la méthode actuelle - Raison inconnue"
 
 msgid "File"
 msgstr "Fichier"
@@ -2332,12 +2384,20 @@ msgstr "Substitutions supprimées"
 msgid "Overrides inactive"
 msgstr "Substitutions inactives"
 
+msgid "Password (optional)"
+msgstr "Mot de passe (facultatif)"
+
 msgid "Paste or write overrides to be imported"
 msgstr "Collez ou saisissez les substitutions à importer"
 
-msgctxt "The patch is a partial settings file that can be applied to the users' list of servers, overriding some of the values for the servers. This is part of Server IP overrides."
 msgid "Patch not matching specification"
 msgstr "Le correctif ne correspond pas à la spécification"
+
+msgid "Please enter a valid IPv4 or IPv6 address"
+msgstr "Merci de saisir une adresse IPv4 ou IPv6 valide"
+
+msgid "Please enter a valid remote server port"
+msgstr "Merci de saisir un port de serveur distant valide"
 
 msgid "Please use the <b>Always-on</b> system setting instead by following the guide in <b>%s</b> above."
 msgstr "Veuillez utiliser le paramètre système <b>Toujours activé</b> en suivant le guide dans <b>%s</b> ci-dessus."
@@ -2357,7 +2417,6 @@ msgstr "Limite de récursion"
 msgid "Remove"
 msgstr "Supprimer"
 
-msgctxt "Remove a Country, City, or Server from a custom list."
 msgid "Remove %s from list"
 msgstr "Supprimer %s de la liste"
 
@@ -2397,14 +2456,23 @@ msgstr "Affiche des rappels lorsque le temps du compte va expirer"
 msgid "Submit"
 msgstr "Envoyer"
 
+msgid "Test method"
+msgstr "Tester la méthode"
+
+msgid "Testing %s..."
+msgstr "Test de %s..."
+
 msgid "Text"
 msgstr "Texte"
 
 msgid "The Auto-connect and Lockdown mode settings can be found in the Android system settings, follow this guide to enable one or both."
 msgstr "Les paramètres de la connexion automatique et du mode Verrouillage se trouvent dans les paramètres du système Android, suivez ce guide pour activer l'un, l'autre ou les deux."
 
-msgid "The Lockdown mode blocks all internet access if the VPN tunnel is manually disconnected. <br/><b>Warning: This setting blocks split apps and the Local Network Sharing feature</b>."
-msgstr "Le mode Verrouillage bloque tout accès à Internet si le tunnel VPN est déconnecté manuellement. <br/><b>Avertissement : Ce paramètre bloque les applications fractionnées et la fonctionnalité de partage du réseau local</b>."
+msgid "The Lockdown mode is called <b>Block connections without VPN</b> in the Android system settings. It helps minimize leaks, however it has some known limitations which you can read more about"
+msgstr "Le mode Verrouillage est appelé <b>Bloquer les connexions sans VPN</b> dans les paramètres système d'Android. Il permet de minimiser les fuites, mais il présente des limites connues sur lesquelles vous pouvez en savoir plus"
+
+msgid "The \"Current\" method represent which method the app is using to reach the API."
+msgstr "La méthode « Actuelle » représente la méthode utilisée par l'application pour atteindre l'API."
 
 msgid "The local DNS server will not work unless you enable \"Local Network Sharing\" under Preferences."
 msgstr "Le serveur DNS local ne fonctionnera pas si vous n'activez pas le « Partage du réseau local » dans les préférences."
@@ -2414,6 +2482,12 @@ msgstr "Votre appareil n'a pas de paramètres VPN"
 
 msgid "This address has already been entered."
 msgstr "Cette adresse a déjà été saisie."
+
+msgid "This field is required"
+msgstr "Ce champ est requis"
+
+msgid "This is already set as current"
+msgstr "Déjà définie comme méthode actuelle"
 
 msgid "To add locations to a list, press the \"︙\" or long press on a country, city, or server."
 msgstr "Pour ajouter des localisations à une liste, appuyez sur la touche « ︙ » ou appuyez longuement sur un pays, une ville ou un serveur."
@@ -2439,12 +2513,15 @@ msgstr "Impossible de démarrer la connexion au tunnel. Veuillez désactiver « 
 msgid "Undo"
 msgstr "Annuler"
 
-msgctxt "Key is refering to a JSON key. The user selected a file or written/pasted a Server IP Override patch that was missing or using an invalid key."
 msgid "Unknown or prohibited key \"%s\""
 msgstr "Clé « %s » inconnue ou interdite"
 
 msgid "Unsecured"
 msgstr "Non sécurisé"
+
+msgctxt "Notification message shown when the app lacks a permission called \"VPN permission\"."
+msgid "Unsecured (No VPN permission)"
+msgstr "Non sécurisé (aucune autorisation VPN)"
 
 msgid "Update DNS server"
 msgstr "Mettre à jour le serveur DNS"
@@ -2454,6 +2531,9 @@ msgstr "Mise à jour disponible. Téléchargez-la pour rester en sécurité."
 
 msgid "Update list name"
 msgstr "Mettre à jour le nom de la liste"
+
+msgid "Use method"
+msgstr "Utiliser la méthode"
 
 msgid "VPN permission error"
 msgstr "Erreur de permission VPN"
@@ -2469,6 +2549,9 @@ msgstr "Une clé WireGuard valide manque. Gérez les clés dans les paramètres 
 
 msgid "Valid ranges: %s"
 msgstr "Plages valides : %s"
+
+msgid "Verifying API method..."
+msgstr "Vérification de la méthode API..."
 
 msgid "Verifying purchase"
 msgstr "Vérification de l'achat"
@@ -2514,6 +2597,10 @@ msgstr "Vous utilisez une version de l'application non prise en charge."
 
 msgid "\"%s\" was deleted"
 msgstr "« %s » a été supprimé"
+
+msgctxt "Clickable link that leads to our website."
+msgid "here"
+msgstr "ici"
 
 msgid "less than a minute ago"
 msgstr "il y a moins d'une minute"
