--- a/gui/locales/fr/relay-locations.po
+++ b/gui/locales/fr/relay-locations.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: mullvad-app\n"
 "Language-Team: French\n"
 "Language: fr_FR\n"
-"PO-Revision-Date: 2024-05-15 07:28\n"
+"PO-Revision-Date: 2024-06-27 08:16\n"
 
 #. AU ADL
 msgid "Adelaide"
@@ -399,6 +399,10 @@ msgstr "Osaka"
 #. NO OSL
 msgid "Oslo"
 msgstr "Oslo"
+
+#. IT PMO
+msgid "Palermo"
+msgstr "Palerme"
 
 #. FR PAR
 msgid "Paris"
