--- a/gui/locales/th/relay-locations.po
+++ b/gui/locales/th/relay-locations.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: mullvad-app\n"
 "Language-Team: Thai\n"
 "Language: th_TH\n"
-"PO-Revision-Date: 2024-05-15 07:28\n"
+"PO-Revision-Date: 2024-06-27 08:16\n"
 
 #. AU ADL
 msgid "Adelaide"
@@ -399,6 +399,10 @@ msgstr "โอซากะ"
 #. NO OSL
 msgid "Oslo"
 msgstr "ออสโล"
+
+#. IT PMO
+msgid "Palermo"
+msgstr "ปาแลร์โม"
 
 #. FR PAR
 msgid "Paris"
